--- a/Array_LinkedList_SkipList/00.Array_LinkedList_SkipList.md
+++ b/Array_LinkedList_SkipList/00.Array_LinkedList_SkipList.md
@@ -28,7 +28,7 @@ In [computer science](https://en.wikipedia.org/wiki/Computer_science), a **linke
 
 ### SkipList
 
-In [computer science](https://en.wikipedia.org/wiki/Computer_science), a **skip list** is a [probabilistic](https://en.wikipedia.org/wiki/Randomized_algorithm) [data structure](https://en.wikipedia.org/wiki/Data_structure) that allows {\displaystyle {\mathcal {O}}(\log n)}![{\mathcal {O}}(\log n)](https://wikimedia.org/api/rest_v1/media/math/render/svg/74a9dfea91c47d1c6563e89bbcd891771b91acfa) search complexity as well as {\displaystyle {\mathcal {O}}(\log n)}![{\mathcal {O}}(\log n)](https://wikimedia.org/api/rest_v1/media/math/render/svg/74a9dfea91c47d1c6563e89bbcd891771b91acfa) insertion complexity within an [ordered sequence](https://en.wikipedia.org/wiki/Ordered_sequence) of {\displaystyle n}![n](https://wikimedia.org/api/rest_v1/media/math/render/svg/a601995d55609f2d9f5e233e36fbe9ea26011b3b) elements. Thus it can get the best features of a sorted [array](https://en.wikipedia.org/wiki/Array_data_structure) (for searching) while maintaining a [linked list](https://en.wikipedia.org/wiki/Linked_list)-like structure that allows insertion, which is not possible in an array. Fast search is made possible by maintaining a linked hierarchy of subsequences, with each successive subsequence skipping over fewer elements than the previous one (see the picture below on the right). Searching starts in the sparsest subsequence until two consecutive elements have been found, one smaller and one larger than or equal to the element searched for. Via the linked hierarchy, these two elements link to elements of the next sparsest subsequence, where searching is continued until finally we are searching in the full sequence. The elements that are skipped over may be chosen probabilistically or deterministically, with the former being more common.[Wikipedia]
+In [computer science](https://en.wikipedia.org/wiki/Computer_science), a **skip list** is a [probabilistic](https://en.wikipedia.org/wiki/Randomized_algorithm) [data structure](https://en.wikipedia.org/wiki/Data_structure) that allows {\displaystyle {\mathcal {O}}(\log n)}![{\mathcal {O}}(\log n)](https://wikimedia.org/api/rest_v1/media/math/render/svg/74a9dfea91c47d1c6563e89bbcd891771b91acfa) search complexity as well as {\displaystyle {\mathcal {O}}(\log n)}![{\mathcal {O}}(\log n)](https://wikimedia.org/api/rest_v1/media/math/render/svg/74a9dfea91c47d1c6563e89bbcd891771b91acfa) insertion complexity within an [ordered sequence](https://en.wikipedia.org/wiki/Ordered_sequence) of {\displaystyle n}![n](https://wikimedia.org/api/rest_v1/media/math/render/svg/a601995d55609f2d9f5e233e36fbe9ea26011b3b) elements. Thus, it can get the best features of a sorted [array](https://en.wikipedia.org/wiki/Array_data_structure) (for searching) while maintaining a [linked list](https://en.wikipedia.org/wiki/Linked_list)-like structure that allows insertion, which is not possible in an array. Fast search is made possible by maintaining a linked hierarchy of subsequences, with each successive subsequence skipping over fewer elements than the previous one (see the picture below on the right). Searching starts in the sparsest subsequence until two consecutive elements have been found, one smaller and one larger than or equal to the element searched for. Via the linked hierarchy, these two elements link to elements of the next sparsest subsequence, where searching is continued until finally we are searching in the full sequence. The elements that are skipped over may be chosen probabilistically or deterministically, with the former being more common.[Wikipedia]
 
 SkipList improve lookup performance of LinkedList. 
 
