--- a/Array_LinkedList_SkipList/01.Array.md
+++ b/Array_LinkedList_SkipList/01.Array.md
@@ -2,7 +2,7 @@
 
 Array supports random access -> the lookup is O(1). Common operations like iterate over the array. find ith element. Those can be resolved by one pointer (or index). Sometimes, you may need another index. That index can help to specify a range. A common technique is to shrink the range to filter out the solution -> two pointers or binary search (especially in sorted array). Or keep moving both ends -> sliding window. 
 
-Two pointers or binary search are usually work for given sorted array. A unsorted array could be sort first and then apply those two techniques. When the final answer also appears with sorting order but the array is given unsorted, a procedure like merge sort/ divide and conquer may help. Those would be talked in another section.
+Two pointers or binary search are usually work for given sorted array. An unsorted array could be sort first and then apply those two techniques. When the final answer also appears with sorting order but the array is given unsorted, a procedure like merge sort/ divide and conquer may help. Those would be talked in another section.
 
 ### Two Sum
 
@@ -28,13 +28,13 @@ Try all the indices with nested loop to enumerate every possible solutions and v
     }
 ```
 
-Time complexity: nested loop -> O(n^2);
+Time complexity: nested loop -> O(n<sup>2</sup>);
 
 Space complexity: O(1)
 
 #### HashMap
 
-The Brute Force method checks every i with other combinations. We actually needs to check if target - nums[i] is in the array. This should have a map (not set because we need the index instead of value). One way is to add all the elements in the map first and check the target - nums[i]. (Note, this method requires record the last location if there are duplicates and one would need to check if the candidate is the current  element. e.g. the target is 6 and there is only one 3 in the element. the index of 3 would be returned but we only have one 3. We need to tell if the map return the nums[i] itself). But we can improve this by iterate once. We can add the element to the map along check target - nums[i]. The two elements must have one come first and the other can later. The later one would be able to check if the previous one in the map.
+The Brute Force method checks every i with other combinations. We actually need to check if target - nums[i] is in the array. This should have a map (not set because we need the index instead of value). One way is to add all the elements in the map first and check the target - nums[i]. (Note, this method requires record the last location if there are duplicates and one would need to check if the candidate is the current  element. e.g. the target is 6 and there is only one 3 in the element. the index of 3 would be returned, but we only have one 3. We need to tell if the map return the nums[i] itself). But we can improve this by iterating once. We can add the element to the map along check target - nums[i]. The two elements must have one come first and the other can later. The later one would be able to check if the previous one in the map.
 
 ```java
     public int[] twoSum(int[] nums, int target) {
@@ -88,7 +88,7 @@ Space complexity: O(1)
 
 [Link](https://leetcode.com/problems/sum-of-square-numbers/)
 
-Given a non-negative integer c, decide whether there're two integers a and b such that a^2^+ b^2^ = c. Note, a and b could be 0.
+Given a non-negative integer c, decide whether there are two integers a and b such that a<sup>2</sup>+ b<sup>2</sup> = c. Note, a and b could be 0.
 
 Analysis
 
@@ -133,9 +133,9 @@ The simplest logic is to iterate over a nest loop to enumerate every possible co
 
 #### Two Pointer
 
-Note the the max area is computed by w * h. where w is the width on x-axis and h is the minimum height of the two bars.  The max width the the length of the whole array - 1. And that value multiplied by the minimum of the ends would get the maximum area with max width.
+Note the max area is computed by w * h. where w is the width on x-axis and h is the minimum height of the two bars.  The max width the length of the whole array - 1. And that value multiplied by the minimum of the ends would get the maximum area with max width.
 
-But there might be higher bars in the middle so we need to continue check. How should the we select which sides to move? Apparently, the smaller of the two should be removed. That because after moving the width is the same (minus 1) but the higher bar is potentially to contain more water. It is not worse than the shorter one. For the shorter one, the previous calculated value is the max area it can form because it was the shorter one and the height of the container would not exceed its height but the width is shrinking. The taller bar on the other hand might find a higher bar for a deeper container. For a special case that the two bars are in the same height. It would be fine to move either of them. That is because the height takes shorter one. After one moving, it would be 3 cases: > h, =h and <h. But there is one bar left. The height of the container is still h however the width is shrinking. None of them would be the solution. Moving any side would just help to find the next candidate.
+But there might be higher bars in the middle. So we need to continue check. How should we select which sides to move? Apparently, the smaller of the two should be removed. That because after moving the width is the same (minus 1) but the higher bar is potentially to contain more water. It is not worse than the shorter one. For the shorter one, the previous calculated value is the max area it can form because it was the shorter one and the height of the container would not exceed its height but the width is shrinking. The taller bar on the other hand might find a higher bar for a deeper container. For a special case that the two bars are in the same height. It would be fine to move either of them. That is because the height takes shorter one. After one moving, it would be 3 cases: > h, =h and <h. But there is one bar left. The height of the container is still h however the width is shrinking. None of them would be the solution. Moving any side would just help to find the next candidate.
 
 ```java
     public int maxArea(int[] height) {
@@ -169,7 +169,7 @@ Move all 0's in an array to the end of it while maintaining the relative order o
 
 #### Extra Array
 
-initiate an array. copy non zero element to the array and copy back to the original.
+initiate an array. copy non-zero element to the array and copy back to the original.
 
 ```java
     public void moveZeroes(int[] nums) {
@@ -195,7 +195,7 @@ This is not the answer because the array should not be copied. But this would he
 
 #### Move elements with two pointer
 
-As one noted in the extra array solution. It is actually no need to copy the element in the copy array. It can be the nums array itself. j would be the slow pointer to move if and only if nums[i] is not zero. Because i is traveling fast than or equal to j. change value in j would not future work of i. But when i reach the end, we should fill the rest to 0's because they have been moved to the front.
+As one noted in the extra array solution. It is actually no need to copy the element in the copy array. It can be the nums array itself. j would be the slow pointer to move if and only if nums[i] is not zero. Because i is traveling faster than or equal to j. change value in j would not future work of i. But when i reach the end, we should fill the rest to 0's because they have been moved to the front.
 
 ```java
     public void moveZeroes(int[] nums) {
@@ -218,7 +218,7 @@ Space complexity: O(1)
 
 #### Two Pointer Swap
 
-The last approach can be improved. It is clear that when i != j first time , j would point to a zero and it should be swap with the first non zero nums[i] after j. After swap nums[i] and nums[j], nums[i] would be zero and nums[j] would be not. nums[j+1] would be zero again and the next non-zero element should be swap with this value again because this non-zero element is the first non-zero element. All the previous analysis would apply here as well. Repeat this problem would lead to the solution
+The last approach can be improved. It is clear that when i != j first time , j would point to a zero, and it should be swapped with the first non-zero nums[i] after j. After swap nums[i] and nums[j], nums[i] would be zero and nums[j] would be not. nums[j+1] would be zero again and the next non-zero element should be swapped with this value again because this non-zero element is the first non-zero element. All the previous analysis would apply here as well. Repeat this problem would lead to the solution
 
 ```java
     public void moveZeroes(int[] nums) {
@@ -248,7 +248,7 @@ nums[j] = nums[i];
 nums[i] = 0;
 ```
 
-If one familiar with the quicksort. The swap technique would remind the process of finding the position of the pivot. The pivot is the last element of the focused range of an array (that could be a random element swapped to the end), then you have two pointers. One is always moves. The other is moved only when an element less than the pivot is found. The latter pointer would swap the element with current element and move to the next. Finally the later pointer would swap its current element with the last element i.e the pivot.
+If one familiar with the quicksort. The swap technique would remind the process of finding the position of the pivot. The pivot is the last element of the focused range of an array (that could be a random element swapped to the end), then you have two pointers. One is always moves. The other is moved only when an element less than the pivot is found. The latter pointer would swap the element with current element and move to the next. Finally, the later pointer would swap its current element with the last element i.e the pivot.
 
 ### 3 Sum
 
@@ -258,7 +258,7 @@ Given an integer array nums, return all the triplets [nums[i], nums[j],nums[k]] 
 
 ### Binary Search
 
-The simplest logics is to try all combinations that would lead to an O(n^3) algorithm. However, if two of the numbers are fixed, the other one can be looked up with O(log(n)) if the array is sorted. So we can first sort the array and try to find the solutions. To avoid duplicates, the duplicates should be skipped.
+The simplest logics is to try all combinations that would lead to an O(n<sup>3</sup>) algorithm. However, if two of the numbers are fixed, the other one can be looked up with O(log(n)) if the array is sorted. So we can first sort the array and try to find the solutions. To avoid duplicates, the duplicates should be skipped.
 
 ```java
    public List<List<Integer>> threeSum(int[] nums) {
@@ -286,7 +286,7 @@ The simplest logics is to try all combinations that would lead to an O(n^3) algo
 
 ```
 
- Time complexity: O(n^2log(n))
+ Time complexity: O(n<sup>2</sup>log(n))
 
 Space complexity: O(1) (Arrays.sort is Dual-Pivot Quicksort)
 
@@ -328,7 +328,7 @@ Like talked in "Two sum with sorted array". "Two sum with sorted array" can be r
     }
 ```
 
-Time complexity: O(n^2)
+Time complexity: O(n<sup>2</sup>)
 
 Space complexity: O(1)
 
@@ -375,13 +375,13 @@ The logic is similar here. When one of the number is fixed. The other two can be
     }
 ```
 
-Time  complexity: O(n^2)
+Time  complexity: O(n<sup>2</sup>)
 
 Space complexity: O(1)
 
 ##### 3sum smaller
 
-The same as the 3 sum problems but it asks the number of triplets that the sum of them is less than the target
+The same as the 3 sum problems, but it asks the number of triplets that the sum of them is less than the target
 
 **Two Pointer**
 
@@ -412,7 +412,7 @@ The same as the 3 sum problems but it asks the number of triplets that the sum o
     }
 ```
 
-Time  complexity: O(n^2)
+Time  complexity: O(n<sup>2</sup>)
 
 Space complexity: O(1)
 
@@ -465,7 +465,7 @@ As we have array sorted, find out all valid combinations for two fixed sides is 
     }
 ```
 
-Time complexity: sort -> log(n)  + loop and nested binary search n^2 log(n) -> O(n^2^log(n))
+Time complexity: sort -> log(n)  + loop and nested binary search n^2 log(n) -> O(n<sup>2</sup>log(n))
 
 Space complexity: O(1)
 
@@ -499,11 +499,11 @@ Similarly to other 3 sum questions, binary search method may not start best posi
     }
 ```
 
-Time complexity: Loop of *k* and *j* will be executed O(n^2^) times in total, because, we do not reinitialize the value of *k* for a new value of *j* chosen(for the same *i*). Thus the complexity will be *O*(*n*^2^+*n*^2^)=*O*(*n*^2^).
+Time complexity: Loop of *k* and *j* will be executed O(n<sup>2</sup>) times in total, because, we do not reinitialize the value of *k* for a new value of *j* chosen(for the same *i*). Thus the complexity will be *O*(*n*<sup>2</sup>+*n*<sup>2</sup>)=*O*(*n*<sup>2</sup>).
 
 Space complexity:  Arrays.sort is Dual-Ended Quicksort -> O(1)
 
-One might think it may improve the performance by modifying the binary search solution with lo = k every time. It did improve the performance of binary search but the result shows it way worse than the above solutions. It may because array caching and for the worse case loop of k and j would exceed  O(n^2^). For example there is no the other side for i and j every time and that costs O(nlogn) for every i -> O(n^2^ log(n)).
+One might think it may improve the performance by modifying the binary search solution with lo = k every time. It did improve the performance of binary search but the result shows it way worse than the above solutions. It may because array caching and for the worse case loop of k and j would exceed  O(n<sup>2</sup>). For example there is no other side for i and j every time and that costs O(nlogn) for every i -> O(n<sup>2</sup>log(n)).
 
 **other thoughts**
 
@@ -554,7 +554,7 @@ A more interesting question would be finding out the the non-duplicated solution
     }
 ```
 
-Time complexity: *O*(*n*^2^).
+Time complexity: *O*(*n*<sup>2</sup>).
 
 space complexity: O(1)
 
@@ -582,11 +582,11 @@ If the array is not sorted and extra space is allowed, one may use LinkedHashSet
     }
 ```
 
-Time complexity : O (n)
+Time complexity : O(n)
 
 Space complexity: O(1)
 
-It is easy to spot when i == j there is no need to assign values. So we can modify as follow.
+It is easy to spot when i == j there is no need to assign values. So we can modify as follows.
 
 ```java
     public int removeDuplicates(int[] nums) {
@@ -608,15 +608,15 @@ It is easy to spot when i == j there is no need to assign values. So we can modi
 
 [Link](https://leetcode.com/problems/rotate-array/)
 
-Given an array, rotate the array to the right by k steps (k >= 0). In each step, one would take one element from the end, the rest of array would be shift to the right by one and put the took element to the beginning of the array.  
+Given an array, rotate the array to the right by k steps (k >= 0). In each step, one would take one element from the end, the rest of array would be shifted to the right by one and put the took element to the beginning of the array.  
 
 #### Brute force
 
-Brute force would simulate the process take one from the end each time. But one should notice that when k > the length of the array, all the elements are moved to pass it original positions at least once. There is no need to simulate cycles. We only need to take care of k%(the length of the array). Each step would result O(n) Time complexity O(n^2). Space complexity O(1)
+Brute force would simulate the process take one from the end each time. But one should notice that when k > the length of the array, all the elements are moved to pass it original positions at least once. There is no need to simulate cycles. We only need to take care of k%(the length of the array). Each step would result O(n) Time complexity O(n<sup>2</sup>). Space complexity O(1)
 
 #### Extra Space
 
-insertion and move the rest of the element is costly in an array. Note the result of the rotate array is to move last k elements to the beginning of the array and move the rest accordingly. To avoid moving the other elements every time, an extra array would help.
+insertion and move the rest of the element is costly in an array. Note the result of the rotated array is to move last k elements to the beginning of the array and move the rest accordingly. To avoid moving the other elements every time, an extra array would help.
 
 ```java
  public void rotate(int[] nums, int k) {
@@ -641,7 +641,7 @@ Space complexity: O(n);
 
 #### Reverse
 
-The follow up question is to solve this with O(1) extra space. Of course, it is not the brute force solution. Check the result of the rotation. It is to move the last k elements to the beginning of the array. This can be done by three reverses. The first reverse is to reverse the whole array. The second reverse would reverse the first k elements and the third reverse would reverse the rest. The first reverse make sure the end would appears earlier than the beginning. The second reverse make the first k elements in original relative order. The third reverse is similar. 
+The follow-up question is to solve this with O(1) extra space. Of course, it is not the brute force solution. Check the result of the rotation. It is to move the last k elements to the beginning of the array. This can be done by three reverses. The first reverse is to reverse the whole array. The second reverse would reverse the first k elements and the third reverse would reverse the rest. The first reverse make sure the end would appears earlier than the beginning. The second reverse make the first k elements in original relative order. The third reverse is similar. 
 
 ```java
     public void rotate(int[] nums, int k) {
@@ -675,7 +675,7 @@ This question is similar to Merge Sorted List. Two array are given,  the second 
 
 
 
-Merge two sorted array is one of the major steps in merge sort. However, in merge sort, it may not be easier to merge them in place because they are adjacent parts in a array. For this problem, it is very hard if you starts from beginning of the two array if no extra space is used because when we place some elements from array 2. How do you deal with the original element in array 1. Note the to-be replaced element in array 1 does not have to be the smallest element in the rest of array2. Of course, one can allocate a new array and fill the element accordingly. This would result to O(m+n) extra space. Can we resolve this in-place? One of the approach is to look backward. Instead of pick the smaller between two head of both arrays. We can pick up the larger between two tails of the arrays. Why this works. This is because the picked element would fill the extra/checked space in array1. Change that position does not affect future comparison but look from the beginning does.
+Merge two sorted array is one of the major steps in merge sort. However, in merge sort, it may not be easier to merge them in place because they are adjacent parts in a array. For this problem, it is very hard if you start from beginning of the two array if no extra space is used because when we place some elements from array 2. How do you deal with the original element in array 1. Note the to-be replaced element in array 1 does not have to be the smallest element in the rest of array2. Of course, one can allocate a new array and fill the element accordingly. This would result to O(m+n) extra space. Can we resolve this in-place? One of the approach is to look backward. Instead of pick the smaller between two head of both arrays. We can pick up the larger between two tails of the arrays. Why this works. This is because the picked element would fill the extra/checked space in array1. Change that position does not affect future comparison but look from the beginning does.
 
 ```java
     public void merge(int[] nums1, int m, int[] nums2, int n) {
