--- a/Array_LinkedList_SkipList/02.LinkedList.md
+++ b/Array_LinkedList_SkipList/02.LinkedList.md
@@ -121,11 +121,11 @@ Space Complexity: O(1)
 
 [Link](https://leetcode.com/problems/linked-list-cycle-ii/)
 
-The same as previous question but return the node where the cycle begins. return null if there no cycles.
+The same as previous question but return the node where the cycle begins. return null if there is no cycles.
 
 
 
-Similar to previous question, this can be resolved with set and one pointer.  The answer is one the pointer reach the a met node or null. However, a two pointer solution with O(1) extra space is available.
+Similar to previous question, this can be resolved with set and one pointer.  The answer is one of the pointers reach the met node or null. However, a two pointer solution with O(1) extra space is available.
 
 The solution is still slow and fast pointer
 
@@ -135,7 +135,7 @@ Let us assume the non-cycle part contains x nodes and the slow pointer travels y
 
 The fast node travels x + y + nC where C is the Circumference and n >= 1. 
 
-The slow node  travels x + y. Also the fast node travels 2 times of what the slow node traveled.
+The slow node  travels x + y. Also, the fast node travels 2 times of what the slow node traveled.
 
 2(x + y) = x + y + nC
 
@@ -143,7 +143,7 @@ x + y = nC
 
 x = nC - y.
 
-If a pointer travels from the head and other travels at the where slow and fast one node each time, they would met at the beginning of the cycle. That is because x = nC - y. When the node starts from the head reach the beginning of the cycle, it travels x. The node from where slow and fast met is also travels x. One the cycle, the latter pointer is at y from the beginning of the cycle. So y + nC - y = nC. It is also at the beginning of the cycle.  
+If a pointer travels from the head and other travels at the where slow and fast one node each time, they would meet at the beginning of the cycle. That is because x = nC - y. When the node starts from the head reach the beginning of the cycle, it travels x. The node from where slow and fast met is also travels x. One the cycle, the latter pointer is at y from the beginning of the cycle. So y + nC - y = nC. It is also at the beginning of the cycle.  
 
 ```java
     public ListNode detectCycle(ListNode head) {
@@ -238,7 +238,7 @@ Merge two sorted lists into one sorted list.
 
 #### Iteration
 
-To merge two sorted list, just pick the smaller node from the head of the two lists and move that head to its next node. The troublesome part is the first node. We need to think about both ListNodes are  null, one of them is null and none of them is null. Again, the sentinel node helps to reduce those boilerplate code to make sure it starts as if both of them are none. If creation of a dummy node is neglectable, it is the reasonable price to pay. This technique would also be used in other cases, for example in dynamic programming, it can add an additional row and/or col for the initial cases.
+To merge two sorted list, just pick the smaller node from the head of the two lists and move that head to its next node. The troublesome part is the first node. We need to think about both ListNodes are  null, one of them is null and none of them is null. Again, the sentinel node helps to reduce those boilerplate code to make sure it starts as if both of them are none. If creation of a dummy node is negligible, it is the reasonable price to pay. This technique would also be used in other cases, for example in dynamic programming, it can add an additional row and/or col for the initial cases.
 
 ```java
     public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
