--- a/Array_LinkedList_SkipList/03.SkipList.md
+++ b/Array_LinkedList_SkipList/03.SkipList.md
@@ -129,4 +129,4 @@ If there can be log(n) levels, it best way to construct it would be similar to t
 
 The MIT lecture  for this question is that 2 levels -> square root of n, 3 levels -> cubic root of n, etc...
 
-It is interesting that if the numbers are consecutive, the famous [Egg Drop](https://leetcode.com/problems/super-egg-drop/) problem would come into mind. 2 levels would be like to have 2 eggs and 3 levels would be like to have 3 eggs, etc... The Egg Drop solution is an optimized indexes of a special case with skip list structure. Actually, the consecutive limitation can be loosed. If you think the order instead of actual value, the problem is to search element. For less than the target, egg would not be broken. Otherwise it would break. The Egg drop solution still apply to the data structure. It is just to arrange by order instead of actual value. But the problem for this solution is that it only fits the static data. But skip list should support dynamic inputs, it would be costly to adjust all the index levels. One of the benefits of skip List compare to AVL tree and red-black tree is it is easy to maintain.
+It is interesting that if the numbers are consecutive, the famous [Egg Drop](https://leetcode.com/problems/super-egg-drop/) problem would come into mind. 2 levels would be like to have 2 eggs and 3 levels would be like to have 3 eggs, etc... The Egg Drop solution is an optimized indexes of a special case with skip list structure. Actually, the consecutive limitation can be loosed. If you think the order instead of actual value, the problem is to search element. For less than the target, egg would not be broken. Otherwise, it would break. The Egg drop solution still apply to the data structure. It is just to arrange by order instead of actual value. But the problem for this solution is that it only fits the static data. But skip list should support dynamic inputs, it would be costly to adjust all the index levels. One of the benefits of skip List comparing to AVL tree and red-black tree is it is easy to maintain.
