--- a/Binary_Search/01.Sqrt.md
+++ b/Binary_Search/01.Sqrt.md
@@ -16,7 +16,7 @@ sqrt(0) -> 0, sqrt(1) -> 1, sqrt(2) -> 1.414, sqrt(3) -> 1.732, sqrt(4) -> 2, sq
 
 0/2 -> 0,       1/2   -> 0,     2/2   -> 1,            3/2   -> 1,             4/2   -> 2,     5/2   -> 2,                 9/2   ->  4.
 
-Only 1 needs to be treat differently, For others, we can safely set the upper boundary to be x/2. Because the answer is less than or equal to x/2. If you do not want to treat 1 differently. you can set upper boundary to be x/2 + 1.
+Only 1 needs to be treated differently, For others, we can safely set the upper boundary to be x/2. Because the answer is less than or equal to x/2. If you do not want to treat 1 differently. you can set upper boundary to be x/2 + 1.
 
 ```java
     public int mySqrt(int x) {
@@ -57,9 +57,9 @@ Newton's method.
 
 [Newton's method](https://en.wikipedia.org/wiki/Newton%27s_method) is another way to find the approximation of the root of a real-value function. The process is repeated as
 
- x~n+1~ = x~n~ - f(x~n~)/f'(x~n~). In this problem, f(x~n~) = x^2^~n~ - C and C is the input so when f(x) and x is the square root. i.e.  x~n+1~ = x~n~ - (x^2^~n~ - C)/2x~n~ = (x~n~ + C/X~n~)/2.
+ x<sub>n+1</sub> = x<sub>n</sub> - f(x<sub>n</sub>)/f'(x<sub>n</sub>). In this problem, f(x<sub>n</sub>) = x<sup>2</sup><sub>n</sub> - C and C is the input so when f(x) and x is the square root. i.e.  x<sub>n+1</sub> = x<sub>n</sub> - (x<sup>2</sup><sub>n</sub> - C)/2x<sub>n</sub> = (x<sub>n</sub> + C/X<sub>n</sub>)/2.
 
-Due to above equation, we can not just keep track the integer part of the result, Otherwise the x~n+1~ may not move at all. We can use double or float. But to test if a double equals to another is different from integer. It is usually define a small epsilon such as 0.000001. As long as the difference not exceed the epsilon, we consider them are equal.
+Due to above equation, we can not just keep track the integer part of the result, Otherwise the x<sub>n+1</sub> may not move at all. We can use double or float. But to test if a double equals to another is different from integer. It is usually define a small epsilon such as 0.000001. As long as the difference not exceed the epsilon, we consider them are equal.
 
 ```java
 public int mySqrt(int x) {
@@ -74,11 +74,11 @@ public int mySqrt(int x) {
     }
 ```
 
-Time complexity: binary search O(log(x)) but it usually find the result quicker than binary search
+Time complexity: binary search O(log(x)) but it usually finds the result quicker than binary search
 
 space complexity: O(1)
 
-Please note in some cases the [Newton's method](https://en.wikipedia.org/wiki/Newton%27s_method)  may not work. for example there is an point which the derivate of the function at that point is 0. More details are [here](https://en.wikipedia.org/wiki/Newton%27s_method#Failure_analysis).
+Please note in some cases the [Newton's method](https://en.wikipedia.org/wiki/Newton%27s_method)  may not work. for example there is a point which the derivative of the function at that point is 0. More details are [here](https://en.wikipedia.org/wiki/Newton%27s_method#Failure_analysis).
 
 ## Valid Perfect Square
 
