--- a/Bitwise_Operation/02.Power_of_2.md
+++ b/Bitwise_Operation/02.Power_of_2.md
@@ -6,7 +6,7 @@ An integer n is a power of two, if there exists an integer x such as n == 2^x^.
 
 ### Solution
 
-This is a classic question. The conclusion is also used in many questions.  The Brute Force way would be follow the "Numnber of 1 Bits". The count should be 1.  But there is better solution. In terms of bit, what changed from n to n -1?  The lowest 1 bit is flipped to 0 bit and all the 0 bits to its right is changed to 1.  Those bits to its left are not changed. Let's look at the changed part. The result  of "AND &" operation on them would 0 because every bit is changed. But those on its left is not changed. The AND operation on them would be the same. So if we only have one 1 bit, the result of n & (n - 1) would be zero. If not, all the 1 bits except the lowest 1 bit would  be kept. The result would not be zero. Also, this question include zero and negative integer. The power of two is always greater than 0. We need check that.
+This is a classic question. The conclusion is also used in many questions.  The Brute Force way would follow the "Numnber of 1 Bits". The count should be 1.  But there is better solution. In terms of bit, what changed from n to n -1?  The lowest 1 bit is flipped to 0 bit and all the 0 bits to its right is changed to 1.  Those bits to its left are not changed. Let's look at the changed part. The result  of "AND &" operation on them would 0 because every bit is changed. But those on its left is not changed. The AND operation on them would be the same. So if we only have one 1 bit, the result of n & (n - 1) would be zero. If not, all the 1 bits except the lowest 1 bit would  be kept. The result would not be zero. Also, this question include zero and negative integer. The power of two is always greater than 0. We need check that.
 
 ```java
     public boolean isPowerOfTwo(int n) {
