--- a/Bitwise_Operation/03.Counting_Bits.md
+++ b/Bitwise_Operation/03.Counting_Bits.md
@@ -6,9 +6,9 @@ Given an integer n, return an array ans of length n+1 such that for each i (0 <=
 
 ### Solution
 
-This problem can be a follow up question of "Number of 1 Bits". Of course, the Brute Force solution would solve this question by calling the "Number of 1 Bits" n times (from 1 to n and we know for 0 there is no 1's).
+This problem can be a follow-up question of "Number of 1 Bits". Of course, the Brute Force solution would solve this question by calling the "Number of 1 Bits" n times (from 1 to n and we know for 0 there is no 1's).
 
-But can we improve the solution. Then we need to find out the relations. between answers.  Can you calculate the number of 1's from the answer of existing/smaller integer. If yes, we can compute the answer from them instead of going through the whole bits again. As we know how to remove the last 1 bits from "Power of 2". It is n & (n - 1). By definition of removing the last 1 bits. That means the current number of 1's would be ans\[n&(n-1)\] + 1. And n & (n-1) < n. So we got our solution.
+But can we improve the solution. Then we need to find out the relations. between answers.  Can you calculate the number of 1's from the answer of existing/smaller integer? If yes, we can compute the answer from them instead of going through the whole bits again. As we know how to remove the last 1 bits from "Power of 2". It is n & (n - 1). By definition of removing the last 1 bits. That means the current number of 1's would be ans\[n&(n-1)\] + 1. And n & (n-1) < n. So we got our solution.
 
 ```java
     public int[] countBits(int n) {
@@ -38,7 +38,7 @@ If you think the above solution is tricky. We can try the following. Let's group
 | 2^2^ | 4,5,6,7               | 0,1,2,3                                           |
 | 2^3^ | 8,9,10,11,12,13,14,15 | 0,1,2,3,4,5,6,7                                   |
 
-As you already can see from the last column. After removing the most significant bit. It is basic go over from the 0 to the end of last group again. That is right, the previous method is removing the last `1` bit. This method would remove the first `1` bit.  Now, we only need to track the the most significant bit. we know when the that is when double of it would be the current index, we should increase it. 
+As you already can see from the last column. After removing the most significant bit. It is basic go over from the 0 to the end of last group again. That is right, the previous method is removing the last `1` bit. This method would remove the first `1` bit.  Now, we only need to track the most significant bit. we know when the that is when double of it would be the current index, we should increase it. 
 
 ```java
     public int[] countBits(int n) {
