--- a/Bitwise_Operation/04.Reverse_Bits.md
+++ b/Bitwise_Operation/04.Reverse_Bits.md
@@ -51,7 +51,7 @@ Time complexity: iterate over all the bits after the leftmost 1 bit O(logn)
 
 Space complexity: O(1)
 
-Follow up question
+Follow-up question
 
 1. We need to cache the result.
 2. cache all numbers is not efficient and may not help much
