--- a/Bitwise_Operation/05.N-Queens_II.md
+++ b/Bitwise_Operation/05.N-Queens_II.md
@@ -2,7 +2,7 @@
 
 [Link](https://leetcode.com/problems/n-queens-ii/)
 
-The n-queens puzzle is the problem of placing n queens on an n8n chessboard such that no two queens attack each other.
+The n-queens puzzle is the problem of placing n queens on an n * n chessboard such that no two queens attack each other.
 
 Given an integer n, return the number of distinct solutions to the n-queens puzzle.
 
@@ -10,7 +10,7 @@ Given an integer n, return the number of distinct solutions to the n-queens puzz
 
 This question is almost identical to the [N-Queens](../Divide_and_Conquer__Backtrack/05.N-Queens.md) except it only asks the count. Actually when we solve the N-Queens problem, we already use bit mask to check if it is feasible. That was take advantage of col, major diagonal and minor diagonal are all straight lines in a 2-D coordinates. So we can easily check major and minor with their intersections on a line. e.g the first row. 
 
-In this problem, we can still use the above technique and get the count instead of adding a solution to the final list. But this problem only asks for count. We can further simply it by bitwise operations. In last solution, we have to iterate over columns in each row to find out next candidates. If we can find the next candidates without loop. That would help. How can we do that? We know if we have the possible positions as a binary. To find out the next candidates without loop. We need to locate one of first 1, first 0, last 0 and last 1. Clearly, we have a way to find out the last 1. That is x & (-x). So we need save the available position as 1 and others as 0. But it is hard to record other occupied position as 0.  What we can do is to set 1 with `| (1 << n) `, so we can use ~ operation to flip 0 and 1. But in that case why not just flip them before get next candidates. Hence, we can record occupied position with 1 and available position as 0. That would be easy for column but how about those diagonals? If we use the mask, we can consider only the current row. We still have major diagonal and minor diagonal are straight lines with tangent == 1  or -1. Can we figure out what is occupied in the diagonal if we know what is occupied in the previous row? Yes, we can. Because the the major diagonal is with tangent = 1, the occupied columns in the next row due to the major diagonal would every thing shift right by 1. Similarly, for the minor, it would be every thing shift by -1. The shift can be achieved by left shift and right shift operations. Of course, we would only consider those still in the grid. This can be done by AND operations with n consecutive 1's mask.
+In this problem, we can still use the above technique and get the count instead of adding a solution to the final list. But this problem only asks for count. We can further simplify it by bitwise operations. In last solution, we have to iterate over columns in each row to find out next candidates. If we can find the next candidates without loop. That would help. How can we do that? We know if we have the possible positions as a binary. To find out the next candidates without loop. We need to locate one of first 1, first 0, last 0 and last 1. Clearly, we have a way to find out the last 1. That is x & (-x). So we need save the available position as 1 and others as 0. But it is hard to record other occupied position as 0.  What we can do is to set 1 with `| (1 << n) `, so we can use ~ operation to flip 0 and 1. But in that case why not just flip them before get next candidates. Hence, we can record occupied position with 1 and available position as 0. That would be easy for column but how about those diagonals? If we use the mask, we can consider only the current row. We still have major diagonal and minor diagonal are straight lines with tangent == 1  or -1. Can we find out what is occupied in the diagonal if we know what is occupied in the previous row? Yes, we can. Because the major diagonal is with tangent = 1, the occupied columns in the next row due to the major diagonal would every thing shift right by 1. Similarly, for the minor, it would be every thing shift by -1. The shift can be achieved by left shift and right shift operations. Of course, we would only consider those still in the grid. This can be done by AND operations with n consecutive 1's mask.
 
 ```java
     public int totalNQueens(int n) {
