--- a/DFS_BFS/02.Minimum_Genetic_Mutation__Word_Ladder.md
+++ b/DFS_BFS/02.Minimum_Genetic_Mutation__Word_Ladder.md
@@ -16,7 +16,7 @@ Note that the starting point is assumed to be valid, so it might not be included
 
 ### Solution
 
-The questions is asking for minimum number of mutations needed to mutate from start to end. In graph theory, that is asking for shortest path from start to the end. As the costs of traveling each edge (by muting one gene) is the same, BFS would be one of solutions. The question is also provide a gene bank that records all the valid gene mutations. That lists node or vertices in the path. We can only travel from through those vertices. Also, the end must be in the bank because it says A gene must be in bank to make it a valid gene string except the starting point which is always valid. Let us check what is the path from one gene string to another. As stated in the question every gene has four options, we need to swap the original gene with other options. Each swap or mutation is a path to next vertices. Of course the mutation should be in the bank. The first time that the end is discovered. The corresponding of number of mutations is the final answer. As one can see, this mutation is not in a DAG. A gene string can go back to previous phases. To avoid a cycle, we would have an set to record previous string to prevent a infinite loop. 
+The question is asking for minimum number of mutations needed to mutate from start to end. In graph theory, that is asking for shortest path from start to the end. As the costs of traveling each edge (by muting one gene) is the same, BFS would be one of solutions. The question is also provide a gene bank that records all the valid gene mutations. That lists node or vertices in the path. We can only travel from through those vertices. Also, the end must be in the bank because it says A gene must be in bank to make it a valid gene string except the starting point which is always valid. Let us check what is the path from one gene string to another. As stated in the question every gene has four options, we need to swap the original gene with other options. Each swap or mutation is a path to next vertices. Of course the mutation should be in the bank. The first time that the end is discovered. The corresponding of number of mutations is the final answer. As one can see, this mutation is not in a DAG. A gene string can go back to previous phases. To avoid a cycle, we would have a set to record previous string to prevent an infinite loop. 
 
 ```java
    //all possible genes does not change from the input    
@@ -81,7 +81,7 @@ The questions is asking for minimum number of mutations needed to mutate from st
     }
 ```
 
-Time complexity:  The time complexity is O(|V| + |E|). |V| can be the size of bank, i.e. n. |E| is actually not clear here. Although it is for all mutation from a word would be in the wordList, But the cost of set chars in chars and String.valueOf() can be the considered costly. In that case that would O(3* 8 *n) -> O(n) where 3 is because we mutate other 3 gene and the total length of gene string is 8 and We have n vertices. Another view is to only consider the connectivity. At most, all vertices are connected to each other that would be O(n^2^) 
+Time complexity:  The time complexity is O(|V| + |E|). |V| can be the size of bank, i.e. n. |E| is actually not clear here. Although it is for all mutation from a word would be in the wordList, But the cost of set chars in chars and String.valueOf() can be the considered costly. In that case that would O(3* 8 *n) -> O(n) where 3 is because we mutate other 3 gene and the total length of gene string is 8, and We have n vertices. Another view is to only consider the connectivity. At most, all vertices are connected to each other that would be O(n^2^) 
 
 Space complexity: Queue and visited set would at most have all the gene - > O(n)
 
@@ -103,7 +103,7 @@ beginWord != endWord
 
 ### Solution
 
-This question is similar to the "Minimum Genetic Mutation". The "Minimum Genetic Mutation" is a simplified version of this problem. A Gene would has 4 options in total. This one, each position has 26 options in total. But the idea is the same. But the idea is the same. BFS would find the shortest path from the beginWord to the endWord if any.
+This question is similar to the "Minimum Genetic Mutation". The "Minimum Genetic Mutation" is a simplified version of this problem. A Gene would have 4 options in total. This one, each position has 26 options in total. But the idea is the same. But the idea is the same. BFS would find the shortest path from the beginWord to the endWord if any.
 
 ```java
     public int ladderLength(String beginWord, String endWord, List<String> wordList) {
@@ -168,16 +168,16 @@ The condition are the same as previous "word ladder". But one would return all t
 
 ### Solution
 
-Clearly, this is a variant of Word Ladder. It asks for all shortest transformation sequences not just one. Our BFS solution in Word Ladder explores paths from beginWord to endWord. So we can modify that solution for this one. The first thing, we need to save the "path" from beginWord to current word instead of just current word in the queue. Otherwise, it is hard to  keep track the path. One can also keep an index of wordList (the beginWord require special handling such as adding to the list at the end) rather than list of word. It may save some spaces but does not much too much for time complexity. Another thing we need to do is the improve the following check.
+Clearly, this is a variant of Word Ladder. It asks for all shortest transformation sequences not just one. Our BFS solution in Word Ladder explores paths from beginWord to endWord. So we can modify that solution for this one. The first thing, we need to save the "path" from beginWord to current word instead of just current word in the queue. Otherwise, it is hard to  keep track the path. One can also keep an index of wordList (the beginWord require special handling such as adding to the list at the end) rather than list of word. It may save some spaces but does not much too much for time complexity. Another thing we need to do is to improve the following check.
 
 ```java
 //test if the word is in the set and not visited
 if (wordSet.contains(next) && visited.add(next)) {
 ```
 
-For example, if you have two paths in the last step, the above condition would only provide one. That is because the first one would add endWord in the set and it won't allow the second path to be added. 
+For example, if you have two paths in the last step, the above condition would only provide one. That is because the first one would add endWord in the set, and it won't allow the second path to be added. 
 
-Here we need to clarify the function provided by `visited.add(next)`. The purpose of this condition is to avoid go back to previous layer in BFS.  By knowing this, we can modify here. We need separate the set. One is for all previous levels and another is for current level. The first one would add all the elements in the second one at the end of each iterations. The breaking condition would also changed to allow more than one answer. We can check if the result list contains element. If it does, we found the answer.
+Here we need to clarify the function provided by `visited.add(next)`. The purpose of this condition is to avoid go back to previous layer in BFS.  By knowing this, we can modify here. We need separate the set. One is for all previous levels and another is for current level. The first one would add all the elements in the second one at the end of each iteration. The breaking condition would also change to allow more than one answer. We can check if the result list contains element. If it does, we found the answer.
 
 ```java
     public List<List<String>> findLadders(String beginWord, String endWord, List<String> wordList) {
@@ -237,7 +237,7 @@ Here we need to clarify the function provided by `visited.add(next)`. The purpos
 
 Time complexity: It is the same as Word ladder
 
-Space complexity:  The entire paths are saved. if we count characters O(m*n^2^)
+Space complexity:  The entire paths are saved. if we count characters O(m*n<sup>2</sup>)
 
 
 
