--- a/DFS_BFS/03.Find_Largest_Value_in_Each_Tree_Row.md
+++ b/DFS_BFS/03.Find_Largest_Value_in_Each_Tree_Row.md
@@ -40,7 +40,7 @@ Time complexity: visiting all nodes O(n) (O(|V| + |E|) |V| = n |E| = 2n)
 
 Space complexity: the queue O(n)
 
-As we known. the tree level traversal can be implemented by DFS. Although this is not level traversal but it can give the correct result. We just need to keep track level in the DFS.
+As we know. the tree level traversal can be implemented by DFS. Although this is not level traversal, it can give the correct result. We just need to keep track level in the DFS.
 
 ```java
     public List<Integer> largestValues(TreeNode root) {
