--- a/DFS_BFS/04.Number_of_Islands__Minesweeper.md
+++ b/DFS_BFS/04.Number_of_Islands__Minesweeper.md
@@ -8,7 +8,7 @@ An **island** is surrounded by water and is formed by connecting adjacent lands 
 
  ### Solution
 
-This question can be solved by DFS. We just just count the `1` and for every `1` encountered, it and its connected 'lands' would be marked as another character so that we do not need to count one land more than once.
+This question can be solved by DFS. We just count the `1` and for every `1` encountered, it and its connected 'lands' would be marked as another character so that we do not need to count one land more than once.
 
 ```java
     private static final int[][] DIRS = {{1,0},{-1,0},{,1},{0,-1}};
@@ -74,11 +74,11 @@ Return *the board after revealing this position according to the following rules
 
 ### Solution
 
-This question is similar to "Number of Islands". But it only starts with a specific location, i.e. (clickr,clickc), whereas, the other problem need to explore all the islands in the board. Also, it would check above, below, left, right and all 4 diagonals. So it requires 8 directions while the other only checks 4 directions. But the idea is the same, we can apply DFS. If the (clickr,clickc) is an unrevealed mine, we should change it to 'X' and stop. Otherwise, we should change 'E' to either 'B' or a digit. As you can see, there is another important difference. 'B' is for blank square that has no adjacent mines and only when the square is 'B', we can continue explore from this cell. Otherwise, if there are unrevealed mines, the number of mines should be recorded and we should not continue exploring from this square. So, we cannot decide if continue to explore when an 'E', unrevealed empty square, is found. It should be determined if this 'E' should be a 'B' or a digit. Try to explore first and return 'M' would lead to a wrong answer. Because the we can accidently reveal more  than it should be. As shown in the following picture. If we explore first and then get the number of mine. The bottom green squire would be revealed but it should not because its left and right should be number and we would stop reveal its neighbors unless there is another blank square around it.
+This question is similar to "Number of Islands". But it only starts with a specific location, i.e. (clickr,clickc), whereas, the other problem need to explore all the islands in the board. Also, it would check above, below, left, right and all 4 diagonals. So it requires 8 directions while the other only checks 4 directions. But the idea is the same, we can apply DFS. If the (clickr,clickc) is an unrevealed mine, we should change it to 'X' and stop. Otherwise, we should change 'E' to either 'B' or a digit. As you can see, there is another important difference. 'B' is for blank square that has no adjacent mines and only when the square is 'B', we can continue exploring from this cell. Otherwise, if there are unrevealed mines, the number of mines should be recorded and we should not continue exploring from this square. So, we cannot decide if continue to explore when an 'E', unrevealed empty square, is found. It should be determined if this 'E' should be a 'B' or a digit. Try to explore first and return 'M' would lead to a wrong answer. Because the we can accidently reveal more  than it should be. As shown in the following picture. If we explore first and then get the number of mine. The bottom green square would be revealed but it should not when its left and right are filled by numbers. We would stop reveal its neighbors unless there is another blank square around it.
 
 ![minesweeper](image/minesweeper0.png)
 
-So, we would count number of unrevealed mines first. Then, we can decide if we should continue explore its neighbors.
+So, we would count number of unrevealed mines first. Then, we can decide if we should continue exploring its neighbors.
 
 ```java
     //define 8 directions: left, right, above, below and all diagonals
