--- a/DP/00.Dynamic_Programming.md
+++ b/DP/00.Dynamic_Programming.md
@@ -22,7 +22,7 @@ Dynamic Programing is Divide and Conquer with optimal substructure
 | ------------------------------------------------------------ | ------ | ---------------------- |
 | suffix (all the elements starting from the current)          | O(n)   | right to left          |
 | prefix (all the elements ending by the current)              | O(n)   | left to right          |
-| substrings (all consecutive elements starting from or ending by the current ) | O(n^2) | increase the substring |
+| substrings (all consecutive elements starting from or ending by the current ) | O(n<sup>2</sup>) | increase the substring |
 
 
 
@@ -40,7 +40,7 @@ public int fib(int n) {
 }
 ```
 
-Time Complexity O(2^n) . Space Complexity (log(n))
+Time Complexity O(2<sup>n</sup>) . Space Complexity (log(n))
 
 **Reduce Time Complexity with memorization**
 
@@ -233,7 +233,7 @@ Find the length longest common subsequence among two string text1 and text2.  A 
 
    Define DP matrix
 
-   dp\[i][j] is the longest common sequence between substring (0,i) of text1 and substring(0,j) of text2.
+   dp[i][j] is the longest common sequence between substring (0,i) of text1 and substring(0,j) of text2.
 
    ```java
        public int longestCommonSubsequence(String text1, String text2) {
@@ -285,7 +285,7 @@ Find the length longest common subsequence among two string text1 and text2.  A 
    
    Time complexity and Space complexity does not change.
    
-   Reduce space complexity because the iteration is only depends on dp[i-1]\[j-1], dp[i]\[j-1] and dp[i-1]\[j]. dp[i-1]\[j-1] can be stored in a dedicated variable to avoid  to be overwritten.
+   Reduce space complexity because the iteration is only depends on dp[i-1][j-1], dp[i][j-1] and dp[i-1][j]. dp[i-1][j-1] can be stored in a dedicated variable to avoid to be overwritten.
    
    ```java
        public int longestCommonSubsequence(String text1, String text2) {
@@ -322,7 +322,7 @@ Find the length longest common subsequence among two string text1 and text2.  A 
    Give a list of items. Their sizes and values are given in array s and array v. A knapsack can fill at most size S. Find the max values that can be filled in the knapsack.
    
    1.  BF
-      Try all possible combinations O(2^n)
+      Try all possible combinations O(2<sup>n</sup>)
    
    2. DP
    
@@ -352,7 +352,7 @@ Find the length longest common subsequence among two string text1 and text2.  A 
       }
       ```
    
-      original problem: dp[s.length]\[S]
+      original problem: dp[s.length][S]
    
       ```java
          public int knapsack(int[] size, int[] value, final int S) {
@@ -375,7 +375,7 @@ Find the length longest common subsequence among two string text1 and text2.  A 
    
       Space complexity: dp array: O(nS);
    
-      Note this only depends on dp[i-1]\[j] and dp[i-1]\[j-size[i-1]]. The space can reduced.
+      Note this only depends on dp[i-1][j] and dp[i-1][j-size[i-1]]. The space can reduced.
    
       ```java
          public int knapsack(int[] size, int[] value, final int S) {
