--- a/DP/02.Triangle.md
+++ b/DP/02.Triangle.md
@@ -35,7 +35,7 @@ Appreantly, there are many duplicates during the computation. E.g  minimumTotal(
 dp[i][j] = Math.min(dp[i+1][j],dp[i+1][j+1]) + cell[i][j];
 ```
 
-Because only dp\[i+1][j] and dp\[i+1][j+1] in previous calculation matters when dp\[i][j] is computed. The dp matrix can be reduced to one dimension array. If dp[j] replaces the dp[j] computed in previous row, dp[j+1] is not affected because it depends on dp[j+1] and dp[j+2] in previous row and both of them are untouched when dp[j] is updated. 
+Because only dp[i+1][j] and dp[i+1][j+1] in previous calculation matters when dp[i][j] is computed. The dp matrix can be reduced to one dimension array. If dp[j] replaces the dp[j] computed in previous row, dp[j+1] is not affected because it depends on dp[j+1] and dp[j+2] in previous row and both of them are untouched when dp[j] is updated. 
 
 Further, to reduce the initialization of the last row, the dp array can be initialized with triangle heights + 1 as if there is an additional row and all of them are zeros. That make all first n values after first iteration became cell[lastRow].
 
@@ -52,7 +52,7 @@ Further, to reduce the initialization of the last row, the dp array can be initi
     }
 ```
 
-Time complexity: traverse all elements. (1 + 2 + .. + n ) = (n+1) * n /2.  O(n^2).
+Time complexity: traverse all elements. (1 + 2 + .. + n ) = (n+1) * n /2.  O(n<sup>2</sup>).
 
 Space complexity: O(n);
 
@@ -88,6 +88,6 @@ If build dp from top. For each row, it would require check if the current entry 
     }
 ```
 
-Time complexity: O(n^2).
+Time complexity: O(n<sup>2</sup>).
 
 Space complexity: maximum previous array is n -1 and the max is n. so O(2n-1) = O(n)
