--- a/DP/03.Maximum_Subarray.md
+++ b/DP/03.Maximum_Subarray.md
@@ -6,7 +6,7 @@ Given a integer array, find out the maximum total of a subarray array, which at 
 
 #### BF
 
-The naïve BF is to try all possible starts and all possible ends with O(n^2).  
+The naïve BF is to try all possible starts and all possible ends with O(n<sup>2</sup>).  
 
 ```java
 public int maxSubArray(int[] nums) {
