--- a/DP/06.Best_Time_to_Buy_and_Sell_Stock.md
+++ b/DP/06.Best_Time_to_Buy_and_Sell_Stock.md
@@ -1,10 +1,10 @@
 ## Best Time to Buy and Sell Stock
 
-Best Time to Buy and Sell Stock are a serial problems can be solved by dynamic programming. Although some of the problems can be solved by other algorithm, one solution cannot be applied to another. dynamic programming technical can be used to solve all of them.  The following relations are in all of the stock problems.
+Best Time to Buy and Sell Stock are a serial problems can be solved by dynamic programming. Although some problems can be solved by other algorithm, one solution cannot be applied to another. dynamic programming technical can be used to solve all of them.  The following relations are in all of those stock problems.
 
 ![sell and buy stock](image/sell_and_buy_stock.png)
 
-A release status means possion of no stocks and the hold status means possion of one stock. Release status would be transferred from by selling holding stock or keep current status. Similiarly, hold status would be transferred from by buying if no stock hold or keep current status. In this serial of problems, one can only hold at most one stock. If a customer can buy more stocks, This is simliar, E.g. status of holding 2 stocks and status of holding 3 stocks are similar to release and hold as stated above. 
+A release status means possession of no stocks and the hold status means possession of one stock. Release status would be transferred from by selling holding stock or keep current status. Similarly, hold status would be transferred from by buying if no stock hold or keep current status. In this serial of problems, one can only hold at most one stock. If a customer can buy more stocks, This is similar, E.g. status of holding 2 stocks and status of holding 3 stocks are similar to release and hold as stated above. 
 
 ### Best Time to Buy and Sell Stock
 
@@ -70,7 +70,7 @@ Of course, the constant solution can also be explained by greedy. To buy from th
 
 The same as previous questions except that one can buy as many times as s/he wants as long as s/he only holds at most one stock.
 
-Because one can buy multiple times as long as at most one stock is hold. The maxium profit if buying a stock at ith day should take account of profits gained in previous transactions. dp[i]\[1] = Math.max(dp[i-1]\[1], -prices[i]); in previous problem should be modified to dp[i]\[1] = Math.max(dp[i-1]\[1], dp[i-1]\[0] - prices[i]);
+Because one can buy multiple times as long as at most one stock is hold. The maximal profit if buying a stock at ith day should take account of profits gained in previous transactions. dp[i][1] = Math.max(dp[i-1][1], -prices[i]); in previous problem should be modified to dp[i][1] = Math.max(dp[i-1][1], dp[i-1][0] - prices[i]);
 
 ```java
     public int maxProfit(int[] prices) {
@@ -86,7 +86,7 @@ Because one can buy multiple times as long as at most one stock is hold. The max
 
 Time complexity and Space complexity are the same as previous one.
 
-Simliar to previous problem, the space complexity can be reduced to constant.
+Similar to previous problem, the space complexity can be reduced to constant.
 
 ```java
     public int maxProfit(int[] prices) {
@@ -101,7 +101,7 @@ Simliar to previous problem, the space complexity can be reduced to constant.
     }
 ```
 
-There is also a greedy solution to this problem that is buying and selling the stock as long as prices[i-1] < prices[i] because one can purchase as many time as s/he wants. 
+There is also a greedy solution to this problem that is buying and selling the stock as long as prices[i-1] < prices[i] because one can purchase as many times as s/he wants. 
 
 ### Best Time to Buy and Sell Stock III
 
@@ -109,7 +109,7 @@ There is also a greedy solution to this problem that is buying and selling the s
 
 The same as previous problem except at most two transactions are allowed. One transaction meaning purchase and selling a stock.
 
-Apparently, we need a way to repesent transfering from zero transaction to one transaction and from one transaction to two transactions. So, an additional demision is required.
+Apparently, we need a way to represent transferring from zero transaction to one transaction and from one transaction to two transactions. So, an additional dimension is required.
 
 ```java
 // dp[i][j][0] ith day at j's transaction without any stock 
@@ -123,9 +123,9 @@ dp[i][2][0] = Math.max(dp[i-1][2][0], dp[i-1][1][1] + prices[i]);
 dp[i][2][1] = Math.max(dp[i-1][2][1], dp[i-1][2][0] - prices[i]);
 ```
 
-The state transformation is similiar to previous image. The transaction is defined at selling a holding stock. So, the dp[i]\[j]\[0] is transfer from rest or from selling stock from previous purcahse with j -1 transactions. The holding is from purchase stock from the release status with j transaction because the transaction is completed only after selling the stock. 
+The state transformation is similar to previous image. The transaction is defined at selling a holding stock. So, the dp[i][j][0] is transfer from rest or from selling stock from previous purchase with j -1 transactions. The holding is from purchase stock from the release status with j transaction because the transaction is completed only after selling the stock. 
 
-We actually does not need dp[][][i]\[2]\[1] because it cannot be sold and there is a penalty of - prices[i] and dp[][][i]\[0]\[0] is always 0.dp[0]\[1] and dp[0]\[2] are impossible. the should be intialized to a very small value.
+We actually do not need dp[i][2][1] because it cannot be sold and there is a penalty of - prices[i] and dp[i][0][0] is always 0.dp[0][1] and dp[0][2] are impossible. they should be initialized with a very small value.
 
 ```java
     public int maxProfit(int[] prices) { 
@@ -151,7 +151,7 @@ We actually does not need dp[][][i]\[2]\[1] because it cannot be sold and there 
 
 Time complexity:  iterate over prices array O(N);
 
-Space complexity: the size of the addy 2\*3\*N => O(N).
+Space complexity: the size of the addy 2x3xN => O(N).
 
 Simliar to previous problems, because dp[i] only depends on dp[i-1] and  other conditions are fixed. This can be solved with constant space.
 
@@ -290,9 +290,9 @@ As observed in constant space solution in III. There is no need to create a new 
 
 [Link]([https://leetcode.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/)
 
-This is a variantion of problem II. There is no limit on how many transaction one can perform but no purchase on the day and the next day after selling the stock.
+This is a variation of problem II. There is no limit on how many transaction one can perform but no purchase on the day and the next day after selling the stock.
 
-Apparently, we still need a third demsion. It it different from III and IV presenting the transation. In this case, that demsion is to tell if a stock was told on that day.
+Apparently, we still need a third dimension. It is different from III and IV presenting the transaction. In this case, that dimension is to tell if a stock was told on that day.
 
  ```java
  //dp[i][0][1] on ith day, no stock was sold and hold one stock
@@ -317,7 +317,7 @@ Apparently, we still need a third demsion. It it different from III and IV prese
 
 Time complexity: O(n)
 
-Space Compleixy: O(n);
+Space Complexity: O(n);
 
 To solve with constant space
 
@@ -347,7 +347,7 @@ dp[i][0][1] = Math.max(dp[i-1][0][1], temp - prices[i]);
 
 ### Best Time to Buy and Sell Stock with Transaction Fee 
 
-This is A variant of II. One can buy and sell the stock as many times as s/he wants but there is a tansation fee at the time of selling the stock. The optimal substructure is the the same as the II except there is a fee added when dp[i-1]\[1] is tranferred to dp[i]\[0].
+This is A variant of II. One can buy and sell the stock as many times as s/he wants but there is a transaction fee at the time of selling the stock. The optimal substructure is the same as the II except there is a fee added when dp[i-1][1] is transferred to dp[i][0].
 
 ```java
     public int maxProfit(int[] prices, int fee) {
