--- a/DP/07.Minimum_Path_Sum.md
+++ b/DP/07.Minimum_Path_Sum.md
@@ -2,7 +2,7 @@
 
 [link](https://leetcode.com/problems/minimum-path-sum/)
 
-find the minimum cost  path from top left to bottom right in a m*n matrix. Only non-negative numbers are in the matrix. The cost of a path is the sum of those values. One can only either move down or move right at each step.
+find the minimum cost  path from top left to bottom right in an m*n matrix. Only non-negative numbers are in the matrix. The cost of a path is the sum of those values. One can only either move down or move right at each step.
 
 Because one can only either move down or move right. The last step would be only from the cell(N-2,M-1) or cell(N-1,M-2) where N is No. of Rows and M is No. of Cols and both row and col indexing from 0.  similarly, their previous step are from their left neighbor and upper neighbor. This can be resolved by a recursion function. It is not hard to find out many duplicated problem which gives a hint for dp.
 
