--- a/DP/08.Maximal_Square.md
+++ b/DP/08.Maximal_Square.md
@@ -4,11 +4,11 @@
 
 In a matrix, there are only 0's and 1's. Find out the maximal area of square of 1's.
 
-A simple solution is to iterate every cell and check the square by iterating  all possible side if all the cells are 1's. Apparently, many duplication work is there. When calculate cell [i,j]. It is search again on cell[i-1,j-1], the new horizontal and vertical sides.   
+A simple solution is to iterate every cell and check the square by iterating  all possible side if all the cells are 1's. Apparently, much redundant work is there. When calculate cell [i,j]. It is search again on cell[i-1,j-1], the new horizontal and vertical sides.   
 
 DP
 
-To calculate maximal square with (i,j) as the bottom right corner. We can check the length of side of maximal square with (i-1,j-1), the consecutive one's in  in row i ended in col j and the the consecutive one's in col j ended in row i. So we need three auxiliary matrix. Two matrices are the prefix sum of each row and col. And the matrix of the maximal square.
+To calculate maximal square with (i,j) as the bottom right corner. We can check the length of side of maximal square with (i-1,j-1), the consecutive one's in  row i ended in col j and the consecutive one's in col j ended in row i. So we need three auxiliary matrix. Two matrices are the prefix sum of each row and col. And the matrix of the maximal square.
 
 ```java
 squares[i][j] = Min(squares[i-1][j-1],rows[i][j-1],cols[i-1][j])) + 1;
@@ -39,7 +39,7 @@ Time complexity: O(MN)
 
 Space complexity: O(MN) three matrix are all N+1 * M+1
 
-However, this can be optimized with only auxiliary matrix. Note squares[i]\[j-1] is the small one of squares[i-1]\[j-1] and row[i]\[j-1].  If squares[i-1]\[j-1] >  row[i]\[j-1], squares[i]\[j-1]  = row[i]\[j-1] because cell (i, j -1 - row[i]\[j-1]) must be 0. So the maximal square with (i,j-1) would be with side as long as row[i]\[j-1]. If  squares[i-1]\[j-1] <  row[i]\[j-1], there must be at least one zero around the upper side and the left side. Similarly, square[i-1]\[j] is the small one of square[i-1]\[j-1] and col[i-1]\[j]. Because wo only care the minimal of squares[i-1]\[j-1],rows[i]\[j-1] and cols[i-1]\[j]. It is equivalent to minimal of  squares[i-1]\[j-1],  squares[i]\[j-1] and  squares[i-1]\[j].
+However, this can be optimized with only auxiliary matrix. Note squares[i][j-1] is the small one of squares[i-1][j-1] and row[i][j-1].  If squares[i-1][j-1] >  row[i][j-1], squares[i][j-1]  = row[i][j-1] because cell (i, j -1 - row[i][j-1]) must be 0. So the maximal square with (i,j-1) would be with side as long as row[i][j-1]. If  squares[i-1][j-1] <  row[i][j-1], there must be at least one zero around the upper side and the left side. Similarly, square[i-1][j] is the small one of square[i-1][j-1] and col[i-1][j]. Because wo only care the minimal of squares[i-1][j-1],rows[i][j-1] and cols[i-1][j]. It is equivalent to minimal of  squares[i-1][j-1],  squares[i][j-1] and  squares[i-1][j].
 
 ```
 dp[i][j] = Min(dp[i-1][j-1],dp[i-1][j],dp[i][j-1]) + 1 for matrix[i][j] = 1
