--- a/DP/09.Max_Sum_of_Rectangle_No_Larger_Than_K.md
+++ b/DP/09.Max_Sum_of_Rectangle_No_Larger_Than_K.md
@@ -6,7 +6,7 @@ For a given matrix, find the maximum sum of rectangle without exceeding k.
 
 Whether the matrix contains negative number would affect the algorithm. This should be confirmed first. The matrix contains negative number. So there is no early termination in some search paths.
 
-The BF approach would try all possible width, length and the position of corn, saying bottom right corner without lose of generality. Each time it would iterate over the the rectangle for the sum.  This leads to an  O(N\*M\*MN*MN) = O(M^3N^3) algorithm. 
+The BF approach would try all possible width, length and the position of corn, saying bottom right corner without lose of generality. Each time it would iterate over the rectangle for the sum.  This leads to an  O(N x M x MN x MN) = O(M<sup>3</sup> x N<sup>3</sup>) algorithm. 
 
 DP
 
@@ -43,7 +43,7 @@ area(i,j,w,l) = dp[i,j] - dp[i-l,j] - dp[i,j-w] + dp[i-l,j-w];
     }
 ```
 
-Time complexity: O(M^2N^2)
+Time complexity: O(M<sup>2</sup>N<sup>2</sup>)
 
 Space complexity: O(MN)  for dp array (N+1,  M+1)
 
@@ -94,7 +94,7 @@ This can be improved. In above solution, all possible width and length are check
     }
 ```
 
-Time complexity: two outer loops O(M^2) . the first nest loop is O(N). The second TreeSet is O(nlog(n)) O(M^2Nlong(N))
+Time complexity: two outer loops O(M<sup>2</sup>) . the first nest loop is O(N). The second TreeSet is O(nlog(n)) O(M<sup>2</sup>Nlong(N))
 
 Space complexity: both the tree and array is O(N)
 
@@ -139,7 +139,7 @@ Here is another way by iterating the right col instead of the width.
 
 Improved by Kadane's algorithm
 
-When the max sum of the sum array is less than or equal to k. That should be returned. And there is a linear max sub array sum algorithm called Kadane's algorithm. This has been applied to 02.Maximum subarray section. The idea is to keep the best sum ended with current element and the best sum from 0...i.  This would reduce the computation in some cases : 1) the algorithm is linear 2) no need to convert prime int to Object Integer.
+When the max sum of the sum array is less than or equal to k. That should be returned. And there is a linear max sub array sum algorithm called Kadane's algorithm. This has been applied to 02.Maximum sub-array section. The idea is to keep the best sum ended with current element and the best sum from 0...i.  This would reduce the computation in some cases : 1) the algorithm is linear 2) no need to convert prime int to Object Integer.
 
 ```java
     public int maxSumSubmatrix(int[][] matrix, int k) {
@@ -199,12 +199,12 @@ When the max sum of the sum array is less than or equal to k. That should be ret
     }
 ```
 
-Follow up question:
+Follow-up question:
 
 What if the number of rows is much larger than the number of columns?
 
-Check the width and length first and than decide if the outer loop to iterate over col or row because the outer loop contribute O(n^2) and the inner one is O(nlog(n)) or better.
+Check the width and length first and then decide if the outer loop to iterate over col or row because the outer loop contribute O(n<sup>2</sup>) and the inner one is O(nlog(n)) or better.
 
 Other thought:
 
-The sum array can also be calculated via dp[i]\[j]. Or redefine the dp[i] as the prefix sum array of row i. 
+The sum array can also be calculated via dp[i][j]. Or redefine the dp[i] as the prefix sum array of row i. 
