--- a/DP/10.Frog_Jump.md
+++ b/DP/10.Frog_Jump.md
@@ -2,7 +2,7 @@
 
 [Link](https://leetcode.com/problems/frog-jump/)
 
-A frog tries to jump across a river without falling into the water. It can jump through the stones. An array is given to tell where the stones are. Each element is the the distance from the riverbank, which is 0. The array always starts from 0 and it contains at least 2 elements. The last one is the other riverbank. The frog jumps like in the following way. If the last jump is k unit. The next jump could be only among k - 1, k and k+1 units. The first jump is always 1 unit.  Check if the frog can across the river or not.
+A frog tries to jump across a river without falling into the water. It can jump through the stones. An array is given to tell where the stones are. Each element is the the distance from the riverbank, which is 0. The array always starts from 0, and it contains at least 2 elements. The last one is the other riverbank. The frog jumps like in the following way. If the last jump is k unit. The next jump could be only among k - 1, k and k+1 units. The first jump is always 1 unit.  Check if the frog can across the river or not.
 
 #### DFS or BFS
 
@@ -10,7 +10,7 @@ This problem can be resolved via BFS or DFS. And the duplicates exists.
 
 #### DP
 
-The problem can resolved via prefix dp array. The prefix is considered because we only know how to jump from 0 to 1 in the beginning. Because we need both where the frog has jumped to and how many units it jumped last time, a 2-D array is required. Note at index i, it can at most jump i units last time. Otherwise, it would jump from a negative index which is not allowed. So we can iterate over 0 ... i units at index i and check if any stones can be reached after jumps.
+The problem can be solved via prefix dp array. The prefix is considered because we only know how to jump from 0 to 1 in the beginning. Because we need both where the frog has jumped to and how many units it jumped last time, a 2-D array is required. Note at index i, it can at most jump i units last time. Otherwise, it would jump from a negative index which is not allowed. So we can iterate over 0 ... i units at index i and check if any stones can be reached after jumps.
 
 ```java
     private final int[] DIR = {-1,0,1};
@@ -47,13 +47,13 @@ The problem can resolved via prefix dp array. The prefix is considered because w
     }
 ```
 
-Time complexity: establish value - index map O(n) and iterate over stone and  jumps O(n^2). O(n^2)
+Time complexity: establish value - index map O(n) and iterate over stone and  jumps O(n<sup>2</sup>). O(n<sup>2</sup>)
 
-Space complexity: O(n^2);
+Space complexity: O(n<sup>2</sup>);
 
 Without index map.
 
-Instead of check if next jump is in the array or not, it can be test if it can jump from 0...i-1 to i. In such way, only the two loops are required. The max jump at j is now j+1, because the max jump to reach j is j and the next max jump is j+1. And it requires to test step - 1, step, step +1 at j where step = stones[i] - stones[j]. Iterate backward for j because the array is monotonic increasing.
+Instead of check if next jump is in the array or not, it can be test if it can jump from 0...i-1 to i. In such way, only the two loops are required. The max jump at j is now j+1, because the max jump to reach j is j and the next max jump is j+1. And it requires testing step - 1, step, step +1 at j where step = stones[i] - stones[j]. Iterate backward for j because the array is monotonic increasing.
 
 ```java
     public boolean canCross(int[] stones) {
@@ -74,7 +74,7 @@ Instead of check if next jump is in the array or not, it can be test if it can j
 
 
 
-Another way to write the above logic is  to define the dp array as if the frog would jump k at j. The previous definition is if the frog reach j with jump k. In previous definition, dp[1]\[1] = true but dp[0]\[0] and dp[0]\[1] is false. But because we need to test if one can jump from 0 to 1. So the dp[0]\[1] in this case is true. The other thing one may observed is that the max jump at j is now j+1, because the max jump to reach j is j and the next max jump is j+1.
+Another way to write the above logic is  to define the dp array as if the frog would jump k at j. The previous definition is if the frog reach j with jump k. In previous definition, dp[1][1] = true but dp[0][0] and dp[0][1] is false. But because we need to test if one can jump from 0 to 1. So the dp[0][1] in this case is true. The other thing one may be observed is that the max jump at j is now j+1, because the max jump to reach j is j and the next max jump is j+1.
 
 ```java
     public boolean canCross(int[] stones) {
@@ -102,6 +102,6 @@ Another way to write the above logic is  to define the dp array as if the frog w
     }
 ```
 
-Time complexity: O(n^2).
+Time complexity: O(n<sup>2</sup>).
 
-Space complexity: O(n^2)
+Space complexity: O(n<sup>2</sup>)
