--- a/DP/11.Split_Array_Largest_Sum.md
+++ b/DP/11.Split_Array_Largest_Sum.md
@@ -2,7 +2,7 @@
 
 [Link](https://leetcode.com/problems/split-array-largest-sum/)
 
-Try to split a non-negative array into m subarray and find out the way to minimize the maximum of the subarrays.  m is at least 1 and at most the size of the array.
+Try to split a non-negative array into m sub-array and find out the way to minimize the maximum of the sub-arrays.  m is at least 1 and at most the size of the array.
 
 #### BF
 
@@ -10,7 +10,7 @@ Try all possible first array and recursively find out all possible second subarr
 
 #### DP
 
-The BF solution obviously compute some cases multiple times. For example, the last element as that last array would be a valid cases for as long as the  the end of  the (m - 2)th subarray is defined. This is a hint for DP. The BF describe above is more likely a suffix dp. This would require a 2-D array. One for the index of the array and the other is for how many groups. For example, dp[i]\[j] means the min of the max sub sum of the array starting with j into i groups.  To reduce to computation in any range, a prefix sum array would be very helpful. So a prefix dp is more convenient. Then the dp[i]\[j] would be   the min of the max sub sum of the array ending by j into i groups. However, one could use suffix sum array instead.
+The BF solution obviously compute some cases multiple times. For example, the last element as that last array would be a valid cases for as long as the end of  the (m - 2)th sub-array is defined. This is a hint for DP. The BF describe above is more likely a suffix dp. This would require a 2-D array. One for the index of the array and the other for how many groups. For example, dp[i][j] means the min of the max sub sum of the array starting with j into i groups.  To reduce to computation in any range, a prefix sum array would be very helpful. So a prefix dp is more convenient. Then the dp[i][j] would be the min of the max sub sum of the array ending by j into i groups. However, one could use suffix sum array instead.
 
 ```
 dp[i][j] = Min(dp[i][j],Max(dp[i-1][k],sum[j+1] - sum[k+1]))
@@ -92,7 +92,7 @@ Space complexity: O(n)
 
 ### Binary Search
 
-Although DP can resolve this problem, it is not the best solution. please note the condition the array does not contains negative element is not used in the DP solution. This condition would help further optimize the solution. Because the array only contains non-negative elements. Let's say the sum of the subarray is noted as sub(i,j). Then sub(i,j) <= sub(i,k) where i <= j and j < k. That mean to check if the a num S is valid the maximum sum when break into m subarrays. One can with a greedy algorithm. To see, how many groups it can be broken into when each sum is less than or equal to S. since sub(i,j) <= sub(i,k). There is no need to check the further if sub(i,j) > S. And if the result is less than or equal to m, this is a valid case because we can always break large group into small groups without raising the max sum. The next question is how to find S. First, S would be greater than or equal to the max value of the array. And S would be less than or equal to the sum of the entire array. That gives a binary search solution.
+Although DP can resolve this problem, it is not the best solution. please note the condition the array does not contain negative element is not used in the DP solution. This condition would help further optimize the solution. Because the array only contains non-negative elements. Let's say the sum of the sub-array is noted as sub(i,j). Then sub(i,j) <= sub(i,k) where i <= j and j < k. That mean to check if a num S is valid the maximum sum when break into m sub-arrays. One can with a greedy algorithm. To see, how many groups it can be broken into when each sum is less than or equal to S. since sub(i,j) <= sub(i,k). There is no need to check the further if sub(i,j) > S. And if the result is less than or equal to m, this is a valid case because we can always break large group into small groups without raising the max sum. The next question is how to find S. First, S would be greater than or equal to the max value of the array. And S would be less than or equal to the sum of the entire array. That gives a binary search solution.
 
 ```java
     public int splitArray(int[] nums, int m) {
