--- a/DP/12.Student_Attendance_Record_II.md
+++ b/DP/12.Student_Attendance_Record_II.md
@@ -54,7 +54,7 @@ dp(i,1,0) = dp(i-1,1,0) + dp(i-1,0,0) + dp(i-1,1,1) + dp(i-1,1,2) + dp(i-1,0,1) 
 
 Time complexity:  only iterate over n : O(n)
 
-Space complexity: 2\*3\*n  O(n);
+Space complexity: 2x3xn  O(n);
 
 Reduce to constant space.
 
@@ -92,7 +92,7 @@ Space complexity: O(1)
 
 Further improvement.
 
-The transform can be seen as a matrix multiplied by a array.
+The transform can be seen as a matrix multiplied by an array.
 
 ```
 dp[i][0][0]   | 0 0 1 0 0 0 |   dp[i-1][0][0]
@@ -114,6 +114,6 @@ dp[i][1][2]   | 0 0 1 0 1 1 |   dp[i-1][1][2]
               | 0 0 1 0 1 1 |
 ```
 
-The result would be the same to A^n multiplied by the array [1,1,0,1,0,0] (possible records on the first day). A^n can be calculate by  [exponentiating by squaring](https://en.wikipedia.org/wiki/Exponentiation_by_squaring). That calculate exponential power by break it into half if that is even or break it into (p^1) *(p ^ (n-1)) as a recursive call. That gives log(n) time complexity instead of n. 
+The result would be the same to A<sup>n</sup> multiplied by the array [1,1,0,1,0,0] (possible records on the first day). A<sup>n</sup> can be calculated by  [exponentiating by squaring](https://en.wikipedia.org/wiki/Exponentiation_by_squaring). That calculate exponential power by break it into half if that is even or break it into (p<sup>1</sup>) *(p<sup>n-1</sup>) as a recursive call. That gives log(n) time complexity instead of n. 
 
 More details would be found at [Improving the runtime from O(n) to O(log n) - LeetCode Discuss](https://leetcode.com/problems/student-attendance-record-ii/discuss/101633/Improving-the-runtime-from-O(n)-to-O(log-n))
