--- a/DP/13.Palindromic_Substrings.md
+++ b/DP/13.Palindromic_Substrings.md
@@ -6,11 +6,11 @@ Get number of palindromic substrings for a given string.
 
 #### BF
 
-Try all possible start and end and valid each case if that is a palindromic substring. If yes, add one. O(n^3)
+Try all possible start and end and valid each case if that is a palindromic substring. If yes, add one. O(n<sup>3</sup>)
 
 #### DP
 
-A string is a substring if and only if its substring by removing first and last characters are also a substring (len >= 3). Instead of searching all the cases, it can only extended a already found palindromic substring and try to extend it. If success, add one. Apparently,  This is a substring DP  (comparing to suffix and prefix).
+A string is a substring if and only if its substring by removing first and last characters are also a substring (len >= 3). Instead of searching all the cases, it can only extend an already found palindromic substring and try to extend it. If success, add one. Apparently,  This is a substring DP  (comparing to suffix and prefix).
 
 ```java
     public int countSubstrings(String s) {
@@ -44,9 +44,9 @@ A string is a substring if and only if its substring by removing first and last 
     }
 ```
 
-Time complexity:  nesting loop O(n^2)
+Time complexity:  nesting loop O(n<sup>2</sup>)
 
-Space complexity: O(n^2);
+Space complexity: O(n<sup>2</sup>);
 
 ### Greedy
 
@@ -71,6 +71,6 @@ The same idea can resolve this problem by greedy alone. This give constant space
     }
 ```
 
-Time complexity: O(n^2).
+Time complexity: O(n<sup>2</sup>).
 
 Space complexity: O(1)
