--- a/DP/14.Burst_Balloons.md
+++ b/DP/14.Burst_Balloons.md
@@ -2,7 +2,7 @@
 
 [Link](https://leetcode.com/problems/burst-balloons/)
 
-Given a bunch of  balloons, each of them is given a score. They are saved in an array, say nums. The ith element is the score of the ith balloon. Here is a game. If the ith balloon is burst, the score  nums[i-1] * nums[i] * nums[i+1] is given. If i is the start or the end, i - 1 and/or i + 1 would be out of boundary and nums[i-1] and/or nums[i+1] would be 1 respectively . For a 5-element array, burst the the first balloon in the first round  would give the score 1 * nums[0] * nums[1] and bust the last balloon in the first round would give the score nums[3]\*nums[4]\*1.  After the ith balloon is burst, its neighbors would become adjacent. If we use the above example, if the second balloon is burst in the first round, burst the 3rd balloon in the second round would give score nums[0] * nums[2] * num[3]. Repeat this process and the total score would be the sum of all scores gained during the game. 
+Given a bunch of  balloons, each of them is given a score. They are saved in an array, say nums. The ith element is the score of the ith balloon. Here is a game. If the ith balloon is burst, the score  nums[i-1] x nums[i] x nums[i+1] is given. If i is the start or the end, i - 1 and/or i + 1 would be out of boundary and nums[i-1] and/or nums[i+1] would be 1 respectively . For a 5-element array, burst the first balloon in the first round would give the score 1 x nums[0] x nums[1] and bust the last balloon in the first round would give the score nums[3] x nums[4] x 1.  After the ith balloon is burst, its neighbors would become adjacent. If we use the above example, if the second balloon is burst in the first round, burst the 3rd balloon in the second round would give score nums[0] x nums[2] x num[3]. Repeat this process and the total score would be the sum of all scores gained during the game. 
 
 Find out the max score, one can get in this game. 
 
