--- a/DP/15.Edit_Distance.md
+++ b/DP/15.Edit_Distance.md
@@ -10,7 +10,7 @@ Find the minimum number of operations required to convert word1 to word2. The fo
 
 #### BF
 
-A recursive function to match the three operations. If the current character from word1 and word2 are matched. return the the minimal operations required in the rest of word1 and word2. If not matched, return 1 + the minimal operations of insert, delete and replace.
+A recursive function to match the three operations. If the current character from word1 and word2 are matched. return the minimal operations required in the rest of word1 and word2. If not matched, return 1 + the minimal operations of insert, delete and replace.
 
 ```java
 public int minDistance(String word1, String word2) {
@@ -41,7 +41,7 @@ private int minDistance(char[] char1, int idx1, char[] char2, int idx2) {
 
 #### DP
 
-When the recursive call involve multiple sub recursive calls, e.g. Math.min(minDistance(char1, idx1, char2, idx2 + 1),Math.min(minDistance(char1, idx1 + 1, char2, idx2 + 1),minDistance(char1, idx1 + 1, char2, idx2))). It usually would contains repeat work. Memorize the intermediate result in a 2D integer array and return the cache if available would be able to improve the BF. Tabulation can also be derived from the above equation. Since memorization would be already suffix of the problem, Tabulation would be think in the prefix just for a different perspective. For this problem both suffix and prefix works. So the dp is defined as the the minimal operations required to covert the substring from 0 to i ,inclusive, in word1to substring from 0 to j in word2. 
+When the recursive call involve multiple sub recursive calls, e.g. Math.min(minDistance(char1, idx1, char2, idx2 + 1),Math.min(minDistance(char1, idx1 + 1, char2, idx2 + 1),minDistance(char1, idx1 + 1, char2, idx2))). To reduce redundant work, memorize the intermediate result in a 2D integer array and return the cache if available would be able to improve the BF. Tabulation can also be derived from the above equation. Since memorization would be already suffix of the problem, in Tabulation, the prefix would be considered just for a different perspective. For this problem both suffix and prefix works. So the dp is defined as the minimal operations required to covert the substring from 0 to i ,inclusive, in word1to substring from 0 to j in word2. 
 
 ```
 dp[i][j] = char[i] == char[j] ? dp[i-1][j-1] : Min(dp[i][j-1],dp[i-1][j-1],dp[i-1][j]; 
@@ -109,7 +109,7 @@ Reduce the space complexity to 1D array.
 
 Space complexity: O(m) where m is the length of word2.
 
-For java to avoid frequent GC. only keep dp[i-1]\[j-1] as a variable.
+For java to avoid frequent GC. only keep dp[i-1][j-1] as a variable.
 
 ```java
   public int minDistance(String word1, String word2) {
