--- a/DP/16.Longest_Increasing_Subsequence.md
+++ b/DP/16.Longest_Increasing_Subsequence.md
@@ -8,7 +8,7 @@ Given an integer array, find the length of the longest strictly increasing subse
 
 Check all the strictly increasing subsequence and find out the longest. One way to do it is to illustrate all the subsequences and check if they are strictly increasing and record the longest length among which are valid.
 
-However, we can do better. If we know the an increasing subsequence ended at an element, when we look back, those are greater or equal to this element would not be included. To find the longest strictly increasing subsequence ended at an element, It can try to find the longest strictly increasing subsequence ended at an element of all previous elements. This reduce some work in the 1st BF solution
+However, we can do better. If we know an increasing subsequence ended at an element, when we look back, those are greater or equal to this element would not be included. To find the longest strictly increasing subsequence ended at an element, It can try to find the longest strictly increasing subsequence ended at an element of all previous elements. This reduces some work in the 1st BF solution
 
 ```java
     public int lengthOfLIS(int[] nums) {
@@ -68,18 +68,18 @@ Space complexity: array O(n);
 
 #### Binary Search
 
-Although DP solution has improved from the BF. Every time, one still needs to check all the elements with small index. However, it was asking for a strictly increasing subsequence. That might apply something like binary search. When iterating over the array, if one element which is greater than all previous element was met, that must be added to the longest increasing subsequence ended by this element because for any existing subsequences this element would increasing after adding this element. However, what if the element is less than or equal to the previous max. This has two cases. 
+Although DP solution has improved from the BF. Every time, one still needs to check all the elements with small index. However, it was asking for a strictly increasing subsequence. That might apply something like binary search. When iterating over the array, if one element which is greater than all previous element was met, that must be added to the longest increasing subsequence ended by this element because for any existing subsequences this element would increase after adding this element. However, what if the element is less than or equal to the previous max. This has two cases. 
 
-1. this element will not help to form a potential longer subsequence. Then this should be discard.
+1. this element will not help to form a potential longer subsequence. Then this should be discarded.
 2. this element will help to form a potential subsequence. Then we should keep considering it.
 
 E.g.
 
-If we already have a subsequence 1, 3, 5. If the next one is 5, then it won't help because it is already 1,3,5. However if that is 4. Then it would help. Because the subsequence would be 1,3,4 and if the next element is a 5. The subsequence would become 1,3, 4, 5. This increase the length compare to 1,3,5. A 2 would also be helpful, Because it will would be 1,2 from this step and it may become 1,2,3,5 in the future which can not be done by 1,3,5.  As the last example shown, it can be set 1,3,5 to 1,2,5 when a 2 is met. This would not change the length of the subsequence but help to increasing the subsequence in the future even though it is not the real subsequence.
+If we already have a subsequence 1, 3, 5. If the next one is 5, then it won't help because it is already 1,3,5. However, if that is 4, it would help. Because the subsequence would be 1,3,4 and if the next element is a 5. The subsequence would become 1,3, 4, 5. This increase the length compare to 1,3,5. A 2 would also be helpful, Because it would be 1,2 from this step, it may become 1,2,3,5 in the future which can not be done by 1,3,5.  As the last example shown, it can be set 1,3,5 to 1,2,5 when a 2 is met. This would not change the length of the subsequence but help to increasing the subsequence in the future even though it is not the real subsequence.
 
-So, instead of tracking the real longest strictly increasing subsequence, one can keep updating an monotonic increasing sequence. increase the subsequence if the new element is greater than the largest and replace the element larger than it in the subsequence otherwise. This works because the newly met element would not affect the existing subsequence but it can improve the future subsequence. That means if you already have a subsequence 1, 3, 5. A 2 would not make it longer. But 2 form a sub sequence 1,2 which is better than 1,3. If the next element and the element after the next is 3 ,4 then you have 1,2,3,4. which is longer than 1,3,5. If the rest is only 5's or the 2 is the last element. It won't change the fact 5 is the last element and the length of 1,3,5 is still recorded.  
+So, instead of tracking the real longest strictly increasing subsequence, one can keep updating a monotonic increasing sequence. increase the subsequence if the new element is greater than the largest and replace the element larger than it in the subsequence otherwise. This works because the newly met element would not affect the existing subsequence, but it can improve the future subsequence. That means if you already have a subsequence 1, 3, 5. A 2 would not make it longer. But 2 form a subsequence 1,2 which is better than 1,3. If the next element and the element after the next is 3 ,4 then you have 1,2,3,4. which is longer than 1,3,5. If the rest is only 5's or the 2 is the last element. It won't change the fact 5 is the last element and the length of 1,3,5 is still recorded.  
 
-Because the helper array is monotonic increasing. Binary search can help to locate the element greater than the newly met one. This gives log(n) instead of n comparing to dp.
+Because the helper array is monotonic increasing. Binary search can help to locate the element greater than the newly met one. It gives log(n) instead of n comparing to dp.
 
 ```java
     public int lengthOfLIS(int[] nums) {
@@ -149,11 +149,11 @@ Time complexity and space complexity is the same as before.
 
 [Link](https://leetcode.com/problems/minimum-operations-to-make-a-subsequence/)
 
-Given a integer array target and another integer array arr, find out minimum number of insertion to make target a subsequence of arr. The target array contains distinct integers. The arr can have duplicates. Insertion into arr can be any position.
+Given an integer array target and another integer array arr, find out minimum number of insertion to make target a subsequence of arr. The target array contains distinct integers. The arr can have duplicates. Insertion into arr can be any position.
 
 #### Longest Common Sequence
 
-Because the insertion can be made in any position and the goal is to make a subsequence (no need for a consecutive matches), like the [delete operation for two strings](https://leetcode.com/problems/delete-operation-for-two-strings/), the minimum number of insertion would be the case to modify the longest common sequence. That is because that sequence contains most elements in the target and that means minimum insertion requirement.  the answer is the length of target - longest common sequence
+Because the insertion can be made in any position and the goal is to make a subsequence (no need for a consecutive matches), like the [delete operation for two strings](https://leetcode.com/problems/delete-operation-for-two-strings/), the minimum number of insertion would be the case to modify the longest common sequence. That is because that sequence contains most elements in the target and that means minimum insertion requirement.  the answer is the length of target - the longest common sequence
 
 ```java
     public int minOperations(int[] target, int[] arr) {
