--- a/DP/18.Longest_Valid_Parentheses.md
+++ b/DP/18.Longest_Valid_Parentheses.md
@@ -6,7 +6,7 @@ A string only contains '(' and ')'. Find the length of the longest valid parenth
 
 #### BF
 
-A valid parentheses substring must ended by a ')'. If the previous character is '('. Then we have a valid substring with two characters. If the previous character is also ')'. Then, the previous character may be a valid substring itself. If yes, we need check if the character before this valid string is '('. If not, then 0. However, after considering those cases, if this is character for a valid string. One also need to consider if there is another valid substring right before the current one. If yes, these two should be combined.
+A pair of valid parentheses substring must end with a ')'. If the previous character is '('. Then we have a valid substring with two characters. If the previous character is also ')'. Then, the previous character may be a valid substring itself. If yes, we need check if the character before this valid string is '('. If not, then 0. However, after considering those cases, if this is character for a valid string. One also need to consider if there is another valid substring right before the current one. If yes, these two should be combined.
 
 ```java
     public int longestValidParentheses(String s) {
@@ -44,7 +44,7 @@ A valid parentheses substring must ended by a ')'. If the previous character is 
 
 #### DP
 
-The recursive calls contains duplicated sub calls. We can use DP to improve this. Clearly, this is a prefix problem. The current calculation depends on the previous result. The subproblem is to find some previous position is the end of a valid substring.
+The recursive calls contains duplicated sub calls. We can use DP to improve this. Clearly, this is a prefix problem. The current calculation depends on the previous result. The sub-problem is to find some previous position is the end of a valid substring.
 
 ```
 dp[i] = 2 + dp[i - 1] + dp[i - dp[i - 1] - 1] if i is end of a valid substring.
@@ -115,7 +115,7 @@ Space complexity: stack O(n)
 
 #### Two Counter
 
-For a valid parentheses substring alone, the left parentheses count should be equal to the right parentheses count. So we can track the counts of '(' and ')'. It is clear that if we count from the start to the end of the string, when right count is greater than the left count is a invalid parentheses substring. That is because the additional ')' would not be matched from then on. So both counts should be set to 0 to find the new valid substring and not affected by previous ')'. 
+For a pair of valid parentheses substring alone, the left parentheses count should be equal to the right parentheses count. So we can track the counts of '(' and ')'. It is clear that if we count from the start to the end of the string, when right count is greater than the left count is an invalid parentheses substring. That is because the additional ')' would not be matched from then on. So both counts should be set to 0 to find the new valid substring and not affected by previous ')'. 
 
 However, this is only correct when additional '(' does not appear before ')'. That would make left count greater than the right count and a valid substring is missed. E.g. "(()". To resolve this, we can traverse backward of the string and of course change the criteria to set 0 when left count is greater than right count. Then the additional '(' does not affect the result. But can you only traverse backward? Of course not, the additional ')' would affect the result. "())" would be 0 if one only traverse backward.
 
