--- a/DP/20.Distinct_Subsequences.md
+++ b/DP/20.Distinct_Subsequences.md
@@ -6,14 +6,14 @@ Given two string s and t, Find out how many subsequences of s equals to t. A sub
 
 #### BF
 
-This can be solved from the prefix or the suffix. Let's check the prefix. If the last character of s and that of t are matched, how many ways subsequence from s ended by the last character matches t? They are two cases:
+This can be solved from the prefix or the suffix. Let's check the prefix. If the last character of s and that of t are matched, how many ways that subsequence from s ended by the last character matches t? They are two cases:
 
 1. how many subsequences of  prefix substring in s is equals to the prefix substring of t  ->  f(s.substring(0,endIdxS), t.substring(0,endIdxT)) where s.substring(0,end) would include all characters before the end(exclusive).
 2. how may subsequence of that substring in s is equal to t. f(s.substring(0,endIdxS),t). This is because that might be either character in s could be the end of matched subsequence when the length of s is greater than t.
 
 How about no match?  Only the second case would be valid because we would find the character to match the last character of t.
 
-Apparently, the end case would be all characters in t is matched or the characters in s  is less than t and they would never match.
+Apparently, the end case would be all characters in t is matched or the characters in s is less than t, and they would never match.
 
 ```java
     public int numDistinct(String s, String t) {
@@ -44,7 +44,7 @@ Apparently, the end case would be all characters in t is matched or the characte
 
 #### DP
 
-As stated above, this is a prefix DP solution. Two dimensions are needed because of comparing characters in two strings. The optimal subproblem is
+As stated above, this is a prefix DP solution. Two dimensions are needed because of comparing characters in two strings. The optimal sub-problem is
 
 ```
 dp[i][j] = dp[i-1][j] + (char1[i] == char2[j] ? dp[i-1][j-1] : 0)
@@ -74,11 +74,11 @@ dp[i][j] = dp[i-1][j] + (char1[i] == char2[j] ? dp[i-1][j-1] : 0)
     } 
 ```
 
-Time complexity:  check every characters in s against every character in t O(mn)
+Time complexity:  check every character in s against every character in t O(mn)
 
 Space complexity: the dp matrix O(mn)
 
-Reduce to 1D array because only dp[i-1]\[j] and dp[i-1]\[j-1] from last row
+Reduce to 1D array because only dp[i-1][j] and dp[i-1][j-1] from last row
 
 ```java
     public int numDistinct(String s, String t) {
