--- a/DP/21.Perfect_Squares.md
+++ b/DP/21.Perfect_Squares.md
@@ -93,6 +93,6 @@ The math solution is based on [Lagrange's four-square theorem](https://en.wikipe
     }
 ```
 
-Time complexity: When it check for 2. O(sqrt(n) * sqrt(sqrt(n)))
+Time complexity: When it checks for 2. O(sqrt(n) * sqrt(sqrt(n)))
 
 Space complexity: O(1)
