--- a/DP/22.Jump_Game.md
+++ b/DP/22.Jump_Game.md
@@ -2,7 +2,7 @@
 
 [Link](https://leetcode.com/problems/jump-game/)
 
-Given a integer array,  each element tells the maximum length that can be jumped from that point. You are start at the first index of the array. Please check if you are able to reach the last index.
+Given an integer array,  each element tells the maximum length that can be jumped from that point. You are start at the first index of the array. Please check if you are able to reach the last index.
 
 #### BF
 
@@ -28,7 +28,7 @@ private boolean canJump(int[] nums, int idx) {
 
 #### DP
 
-The above BF solution can be translate to a suffix DP solution. 
+The above BF solution can be translated to a suffix DP solution. 
 
 ```java
     public boolean canJump(int[] nums) {
@@ -49,13 +49,13 @@ The above BF solution can be translate to a suffix DP solution.
     }
 ```
 
-Time complexity: traverse all elements and check all the elements after it each time .  O(n^2).
+Time complexity: traverse all elements and check all the elements after it each time .  O(n<sup>2</sup>).
 
 Space complexity: O(n);
 
 #### Two Pointer
 
-Note the above DP solution can be further optimized during check if an intermediate index can jump to the last index. If an index can be reached should be able to check with additional if i + max jump at i >= target index. Then the target can be reached. If an index, say i, can reach the last index, other index is also able to reach the last as long as they are able to reach i as from i one is able to jump to the last index.  Instead of a dp array. One actually need sthe smallest index can jump to the last index. And finally check if that is 0. 
+Note the above DP solution can be further optimized during check if an intermediate index can jump to the last index. If an index can be reached should be able to check with additional if i + max jump at i >= target index. Then the target can be reached. If an index, say i, can reach the last index, other index is also able to reach the last as long as they are able to reach i as from i one is able to jump to the last index.  Instead of a dp array. One actually needs the smallest index can jump to the last index. And finally check if that is 0. 
 
 ```java
     public boolean canJump(int[] nums) {
@@ -108,7 +108,7 @@ Time complexity and Space complexity:  are the same as the DP solution above
 
 ##### Two Pointer
 
-The least jump steps is kind of greedy strategy. The first step that is able to jump to the last step would be the intermediate steps in the optimal solution. Then we can search from the start again to find the index the the least jump would pass through. Repeat this process until reach the start.
+The least jump steps is kind of greedy strategy. The first step that is able to jump to the last step would be the intermediate steps in the optimal solution. Then we can search from the start again to find the index the least jump would pass through. Repeat this process until reach the start.
 
 ```java
     public int jump(int[] nums) {
@@ -128,7 +128,7 @@ The least jump steps is kind of greedy strategy. The first step that is able to 
     }
 ```
 
-Time complexity: Every time move backward for 1 in the while loop O(n ^2 )
+Time complexity: Every time move backward for 1 in the while loop O(n<sup>2</sup>)
 
 Space complexity: O(1)
 
