--- a/DP/23.Unique_Paths_III.md
+++ b/DP/23.Unique_Paths_III.md
@@ -15,7 +15,7 @@ One can work 4 directions, i.e. up, down, left and right, as long as there is ob
 
 #### BF(backtrack)
 
-If the problem does not enforce every non-obstacle square is visited exactly once. This problem would be try to every possible direction and mark the passed square as obstacle and unmark them after exam current path in a depth first pattern.
+If the problem does not enforce every non-obstacle square is visited exactly once. One would try to every possible direction and mark the passed square as obstacle and unmark them after exam current path in a depth first pattern.
 
 It would be fairly easy to build from here. Because the above solution only missed one requirement that  every non-obstacle square is visited exactly once. In the above solution, every non-obstacle square is visited one or zero times. So, it is only need to check if every obstacle square is visited. Because the above solution will not visit non-obstacle twice or more. We can add a counter to check it. 
 
@@ -65,7 +65,7 @@ It would be fairly easy to build from here. Because the above solution only miss
     }
 ```
 
-Time complexity: Each square have 4 direction O(4^(mn)) where m and n are row size and col size.
+Time complexity: Each square have 4 direction O(4<sup>mn</sup>) where m and n are row size and col size.
 
 Space complexity:  O(1) for each recursion and the max recursion depth is mn -> O(mn)
 
@@ -100,7 +100,7 @@ The number in parentheses are the steps in order. As you can see, after nine ste
 |      |      |      |      |      |      |
 |      |      |      |      |      | 2    |
 
-This is different from what we have seen like suffix and prefix and substring. This requires at least one dimension to record the status. So we need 3 dimensions: row , col and the status of the matrix. As this problem is limited to a small number . Each cell can be encoded as an integer  (1 << (r * M) + c) where M is the total # of columns. Of course, one can find a way to make a string combining row, col and the current status to break this limitation.
+This is different from what we have seen like suffix and prefix and substring. This requires at least one dimension to record the status. So we need 3 dimensions: row , col and the status of the matrix. As this problem is limited to a small number . Each cell can be encoded as an integer  (1 << (r x M) + c) where M is the total # of columns. Of course, one can find a way to make a string combining row, col and the current status to break this limitation.
 
 ```java
     final int[][] DIRS = {{-1,0},{1,0},{0,-1},{0,1}};
@@ -160,5 +160,5 @@ This is different from what we have seen like suffix and prefix and substring. T
 
 This is kinds of application of the [Held–Karp algorithm](https://en.wikipedia.org/wiki/Held%E2%80%93Karp_algorithm) which solves the famous traveling sales man problem with dynamic programming. The problem [Find the Shortest Superstring](https://leetcode.com/problems/find-the-shortest-superstring/) is more closed to the travelling salesman problem than this one. As one can see at least for this problem the dp does not improve the performance( but it does improve the performance of [Find the Shortest Superstring](https://leetcode.com/problems/find-the-shortest-superstring/)) . The solution here is only for completion. The time complexity and space complexity analysis can be found in above Wikipedia.
 
-Time Complexity and space complexity: O(MN*2^(MN))
+Time Complexity and space complexity: O(MNx2<sup>MN</sup>)
 
