--- a/Divide_and_Conquer__Backtrack/00.Introduction.md
+++ b/Divide_and_Conquer__Backtrack/00.Introduction.md
@@ -8,7 +8,7 @@ A divide-and-conquer algorithm recursively breaks down a problem into two or mor
 
 ![divide_and_conquer](image\divide_conquer.png)
 
-The above image shows the process. The original problem is kept to be broken down into subproblems. In the above image, it only reaches two levels but, in real life, it may require more levels until the subproblem is simple enough to be solved directly. 
+The above image shows the process. The original problem is kept to be broken down into sub-problems. In the above image, it only reaches two levels but, in real life, it may require more levels until the sub-problem is simple enough to be solved directly. 
 
 Here is an example of divide and conquer
 
