--- a/Divide_and_Conquer__Backtrack/01.Power.md
+++ b/Divide_and_Conquer__Backtrack/01.Power.md
@@ -8,9 +8,9 @@ Implement [pow(x, n)](http://www.cplusplus.com/reference/valarray/pow/), which c
 
 One  should ask to clarify the problem. For example, would the result be overflow and how to deal with it (sometimes, it would be mod a base such as 1000000007) and the range of n. In this problem, x is between -100.0 and 100.0. And n is a 32-bit integer. The final result is between -10^4 and 10^4. So the final result would not be overflowed. 
 
-Let us assume n > 0. The most naïve way to solve it is to simulate the process by taking x and multiply it one by one. However, to calculate x to the power of n, we can break it into small subproblems. when n is even, pow(x,n) would be (pow(x,n/2))^2. When n is odd, that would be x * (pow(x,(n-1)/2)) ^2. Since n is an integer, in java, n/2 == (n-1)/2 when n is odd. However, we may still not be able to calculate pow(x,n/2). But we know when n == 1, pow(x,1) == x. So we can keep break the problem down until it reaches n == 1. How about the negative n? We have pow(x,n) == 1.0/(pow(x,-n)). So it would be fairly easy to solve it when we know how to solve  the positive n case. But there is a catch here. n is a 32-bit integer. That means n is from -2^32^  to 2^32^-1. That's it. Directly converting negative n to the positive n would be overflow when n == -2^32^. One can use long instead. Or 
+Let us assume n > 0. The most naïve way to solve it is to simulate the process by taking x and multiply it one by one. However, to calculate x to the power of n, we can break it into small subproblems. when n is even, pow(x,n) would be (pow(x,n/2))<sup>2</sup>. When n is odd, that would be x * (pow(x,(n-1)/2))<sup>2</sup>. Since n is an integer, in java, n/2 == (n-1)/2 when n is odd. However, we may still not be able to calculate pow(x,n/2). But we know when n == 1, pow(x,1) == x. So we can keep break the problem down until it reaches n == 1. How about the negative n? We have pow(x,n) == 1.0/(pow(x,-n)). So it would be fairly easy to solve it when we know how to solve  the positive n case. But there is a catch here. n is a 32-bit integer. That means n is from -2<sup>32</sup>  to 2<sup>32</sup>-1. That's it. Directly converting negative n to the positive n would be overflow when n == -2<sup>32</sup>. One can use long instead. Or 
 
-pow(x,n) == 1.0/(x * pow(x,-(n + 1)). Another optimization is when x=0.0, all the positive n would result to 0.0. It should throw an error when n is negative but that is not specified here. One may need to clarify this. Also 0^0 == 1. Also 1.0 to any power is 1.0. 
+pow(x,n) == 1.0/(x * pow(x,-(n + 1)). Another optimization is when x=0.0, all the positive n would result to 0.0. It should throw an error when n is negative but that is not specified here. One may need to clarify this. Also, 0<sup>0</sup> == 1 and 1.0 to any power is 1.0. 
 
 ```java
     public double myPow(double x, int n) {
