--- a/Divide_and_Conquer__Backtrack/02.Subset.md
+++ b/Divide_and_Conquer__Backtrack/02.Subset.md
@@ -8,7 +8,7 @@ The solution set **must not** contain duplicate subsets. Return the solution in 
 
 ### Solution
 
-This is similar to combinations problem. In that problem, we would get all the combinations for k elements. This question is asks for all subsets. The backtrack technique still works here. For each element, we would have two choice:
+This is similar to combinations problem. In that problem, we would get all the combinations for k elements. This question is asks for all subsets. The backtracking technique still works here. For each element, we would have two choice:
 
 1. ignore the element
 2. put the element in the set
@@ -45,7 +45,7 @@ When the last element is processed, we can add it to the result.
     }
 ```
 
-Time complexity: each element would be either ignored or taken. The final step would duplicate the list which costs n. O(2^n^ * n)
+Time complexity: each element would be either ignored or taken. The final step would duplicate the list which costs n. O(2<sup>n</sup> * n)
 
 Space complexity: the depth of recursion is n O(n).
 
@@ -59,7 +59,7 @@ The solution set **must not** contain duplicate subsets. Return the solution in 
 
 ###### Solution
 
-The only difference of the problem is the array contains duplicated elements. To avoid duplicates in the final result, the elements with the same value should be put in different positions. So, when put an element in the candidates, it should be check if an element with same value is already put at the current position.  For each element, we have two choices - ignoring and including. If an element with same value is visited before, the ignoring branch should not take the element again because the other branch already included that case. To find out that, Soring, HashMap, boolean array or an integer (because the value is between -10 and 10. 21 < 32.) should work. Here, sorting is used. In that case, one only need to check if the previous element is with the same value. 
+The only difference of the problem is the array contains duplicated elements. To avoid duplicates in the final result, the elements with the same value should be put in different positions. So, when put an element in the candidates, it should be checked if an element with same value is already put at the current position.  For each element, we have two choices - ignoring and including. If an element with same value is visited before, the ignoring branch should not take the element again because the other branch already included that case. To find out that, Soring, HashMap, boolean array or an integer (because the value is between -10 and 10. 21 < 32.) should work. Here, sorting is used. In that case, one only need to check if the previous element is with the same value. 
 
 ```java
     public List<List<Integer>> subsetsWithDup(int[] nums) {
@@ -93,6 +93,6 @@ The only difference of the problem is the array contains duplicated elements. To
     }
 ```
 
-Time complexity: Worst case no duplicates -> O(2^n^ * n)
+Time complexity: Worst case no duplicates -> O(2<sup>n</sup> * n)
 
 Space complexity: the depth of recursion is n O(n).
