--- a/Divide_and_Conquer__Backtrack/03.Majority_Element.md
+++ b/Divide_and_Conquer__Backtrack/03.Majority_Element.md
@@ -2,11 +2,11 @@
 
 [Link](https://leetcode.com/problems/majority-element/)
 
-Given an array return the majority elements.  The majority element would appears more than half length of the array times.
+Given an array return the majority elements.  The majority element would appear more than half of length of the array times.
 
 ### Solution
 
-The two pass solution is obvious. The first pass would record how many times an element appears with a Map. And the second pass would go over the Map find the element with max appears. This solution is general to find the element with most frequency. However, this does not consider the condition that majority elements occupied more than half or the array. This leads to the one pass solution. Because the majority element is more than the half, the difference in count between it and all the rest elements is greater than 0. So we can visit the elements one by one and if the new elements match the current candidate, then the count would be add 1. If not, it would be minus 1. When the count is less than zero, the current element would become the candidates. Because the majority is more than the half. At the end of the iteration, it would be the candidates left. This is call Boyer-Moore majority vote algorithm.
+The two pass solution is obvious. The first pass would record how many times an element appears with a Map. And the second pass would go over the Map find the element with max appears. This solution is general to find the element with most frequency. However, this does not consider the condition that majority elements occupied more than half or the array. This leads to the one pass solution. Because the majority element is more than the half, the difference in count between it and all the rest elements is greater than 0. So we can visit the elements one by one and if the new elements match the current candidate, then the count would be increased by 1. If not, it would be minus 1. When the count is less than zero, the current element would become the candidates. Because the majority is more than the half. At the end of the iteration, it would be the candidates left. This is call Boyer-Moore majority vote algorithm.
 
 ```java
     public int majorityElement(int[] nums) {
@@ -31,7 +31,7 @@ Time complexity: O(n)
 
 Space complexity: O(1)
 
-Note. This question can be solved with divide and conquer as well. Split the original array into half. Keep doing it until only one element left. Then we can start merge. Merging would requires go through all the current sub array and find out the majority elements. It works but this would be O(nlogn) so the Boyce-Moore is still the preferred solution.
+Note. This question can be solved with divide and conquer as well. Split the original array into half. Keep doing it until only one element left. Then we can start merge. Merging would require go through all the current sub array and find out the majority elements. It works but this would be O(nlogn) so the Boyce-Moore is still the preferred solution.
 
 ### Majority Element II
 
@@ -48,10 +48,10 @@ Would this procedure keep all the majority elements left in the final result?
 1. Every time, a 3 unique element is found, they are removed from the candidates and count
 2. Let us assume, it was removed k times. Which mean 3 * k elements are removed
 3. There are only n elements. 3 * k <= n  so  k <= n/3 and k is integer k <= ⌊ n/3 ⌋
-4. each elements are removed at most k times.
-5. The majority elements are more than ⌊ n/3 ⌋. They must left in the final result.
+4. each element is removed at most k times.
+5. The majority elements are more than ⌊ n/3 ⌋. They must be left in the final result.
 
-Finally we should check if two candidates satisfy the question. There is no guarantee they must appear more than `⌊ n/3 ⌋` times.
+Finally, we should check if two candidates satisfy the question. There is no guarantee they must appear more than `⌊ n/3 ⌋` times.
 
 ```java
     public List<Integer> majorityElement(int[] nums) {
@@ -102,7 +102,7 @@ Time complexity: O(n)
 
 Space complexity: O(1)
 
-With above analysis, we can generalize the question as follow.
+With above analysis, we can generalize the question as follows.
 
 Given an integer array of size `n`, find all elements that appear more than `⌊ n/k ⌋` times. where k is an integer and 1< k < n.
 
