--- a/Divide_and_Conquer__Backtrack/04.Letter_Combinations_of_a_Phone_Number.md
+++ b/Divide_and_Conquer__Backtrack/04.Letter_Combinations_of_a_Phone_Number.md
@@ -8,7 +8,7 @@ Given a string containing digits from 2-9 inclusive, return all possible letter 
 
 ### Solution
 
-It asks for all possible combinations without duplicates. We can apply backtrack to search all the possible solutions. First we need a mapping of digits to characters. This can be a Map or a 2-d char array (the digits from 2 - 9 is limited and consecutive).During the search, we need something to save current choice. Because it is character, one can use StringBuilder. However, each action with StringBuilder would check if the index out of boundary. And we know all the combinations have the same length as the input digit string. We can use char array instead. Another benefit of char array is that we do not need deliberately restore the state each time since we can use the the index every time. For empty string, there is no need to check we can return the empty list directly. Otherwise, we would have a special case in termination part in recursion function.
+It asks for all possible combinations without duplicates. We can apply backtracking to search all the possible solutions. First we need a mapping of digits to characters. This can be a Map or a 2-d char array (the digits from 2 - 9 is limited and consecutive).During the search, we need something to save current choice. Because it is character, one can use StringBuilder. However, each action with StringBuilder would check if the index out of boundary. And we know all the combinations have the same length as the input digit string. We can use char array instead. Another benefit of char array is that we do not need deliberately restore the state each time since we can use the index every time. For empty string, there is no need to check we can return the empty list directly. Otherwise, we would have a special case in termination part in recursion function.
 
 ```java
     private final static char[][] chars = {
