--- a/Divide_and_Conquer__Backtrack/05.N-Queens.md
+++ b/Divide_and_Conquer__Backtrack/05.N-Queens.md
@@ -12,7 +12,7 @@ Each solution contains a distinct board configuration of the n-queens' placement
 
 ### Solution
 
-This is a classic question for back tracking. When a queen is placed, there should be no queen in the same row, the same col, the same major diagonal and the same minor diagonal. So we can try to place a queen at each row and check if it satisfy other rows. So we need a way to track the previous queens' col and diagonals.  It is easy for column. But how to track the diagonals. The simplest logic is to have a list or array and record the column of all previous queen. We can travel back each row with +1 or -1 and check if it encounters previous queen. It works but time-consuming. The diagonal in the chessboard is also an diagonal. So, it is a line. For a line, we have ax + by = c for all points (x,y) on the line. This enable us to check diagonal in the same way as to check column. We only need to see if y - x and y + x visited before.
+This is a classic question for back tracking. When a queen is placed, there should be no queen in the same row, the same col, the same major diagonal and the same minor diagonal. So we can try to place a queen at each row and check if it satisfies other rows. So we need a way to track the previous queens' col and diagonals.  It is easy for column. But how to track the diagonals. The simplest logic is to have a list or array and record the column of all previous queen. We can travel back each row with +1 or -1 and check if it encounters previous queen. It works but time-consuming. The diagonal in the chessboard is also a diagonal. So, it is a line. For a line, we have ax + by = c for all points (x,y) on the line. This enables us to check diagonal in the same way as to check column. We only need to see if y - x and y + x visited before.
 
 ```java
     public List<List<String>> solveNQueens(int n) {
@@ -60,11 +60,11 @@ This is a classic question for back tracking. When a queen is placed, there shou
     }
 ```
 
-Time complexity: After each placement, the next queen would lost at least one option (e.g the same column). At Level 0, it would be n choices. The next would be at most n - 1 choices. The next would be at most n - 2 choices and so on. It would be O(n * (n-1) * (n-2)\*...\*1) = O(n!)
+Time complexity: After each placement, the next queen would lose at least one option (e.g the same column). At Level 0, it would be n choices. The next would be at most n - 1 choices. The next would be at most n - 2 choices and so on. It would be O(n * (n-1) * (n-2)\*...\*1) = O(n!)
 
 Space complexity:  those sets are O(n) spaces and the recursion depth are at most n => O(n)
 
-The above solution take advantage of HashSet for checking if it could be attacked by another queen. Because the n is at most 9, we can also boolean array to record it instead of HashSet. However, the major diagonal is y - x. That can be negative. So we need shift it to make every element is positive. The min of the line y - x is at the bottom left cell 0 - (n - 1) = 1 - n. We can shift the result by n - 1. It would require 2 array with length 2n. 
+The above solution take advantage of HashSet for checking if it could be attacked by another queen. Because the n is at most 9, we can also use a boolean array to record it instead of HashSet. However, the major diagonal is y - x. That can be negative. So we need shift it to make every element is positive. The min of the line y - x is at the bottom left cell 0 - (n - 1) = 1 - n. We can shift the result by n - 1. It would require 2 array with length 2n. 
 
 ```java
     public List<List<String>> solveNQueens(int n) {
