--- a/Greedy/01.Lemonade_Change.md
+++ b/Greedy/01.Lemonade_Change.md
@@ -3,21 +3,21 @@
 
 [Link](https://leetcode.com/problems/lemonade-change/)
 
-At a lemonade stand, each lemonade costs \$5. Customers are standing in a queue to buy from you, and order one at a time (int the order specified by bills). Each customer will only buy one lemonade and pay with either \$5, \$10 or \$20 bill. You must provide the correct change to each customer so that the next transaction is that the customer pays \$5.
+At a lemonade stand, each lemonade costs $5. Customers are standing in a queue to buy from you, and order one at a time (int the order specified by bills). Each customer will only buy one lemonade and pay with either \$5, \$10 or \$20 bill. You must provide the correct change to each customer so that the next transaction is that the customer pays $5.
 
 Note that you don't have any change in hand at first.
 
-Given a integer array bills where bills[i] is the bill the i^th^ customer pays, return true if you can provide every customer with correct change, or false otherwise.
+Given an integer array bills where bills[i] is the bill the i^th^ customer pays, return true if you can provide every customer with correct change, or false otherwise.
 
 ### Solution
 
 This can be viewed as a simplified knapsack/coin change problem. It is simplified because the 5, 10 and 20 are in a sequence that each element is a multiple of all previous elements. The result of this is that we need to use the higher bill first.
 
-For a \$20 bill, the changes would be a \$10 bill and a $5 bill or 3 \$5 bills.
+For a $20 bill, the changes would be a $10 bill and a $5 bill or 3 $5 bills.
 
-For a $10 bill, the change would be a \$5 bill.
+For a $10 bill, the change would be a $5 bill.
 
-So for a \$20 bill, we would return a \$10 bill if we have one so that we can save \$5 for those \$10 bills.
+So for a $20 bill, we would return a \$10 bill if we have one so that we can save $5 for those $10 bills.
 
 ```java
     public boolean lemonadeChange(int[] bills) {
