--- a/Greedy/02.Best_Time_To_Buy_And_Sell_Stock_II.md
+++ b/Greedy/02.Best_Time_To_Buy_And_Sell_Stock_II.md
@@ -10,7 +10,7 @@ Find the maximum profit you can achieve. You may complete as many transactions a
 
 ### Solution
 
-Because there is no limits on how many transactions and there is no penalty/cost on transactions. The problem becomes easy. Any transactions bring positive values should be considered. Also if the stock prices are mono-increased. the profit of buying at the first day and selling at the last day is equals to buying at the first day and selling previous stock and buying again except the last day is the same. But if there is one day in the middle has a lower price than the previous day. The strategy of only make a transaction when the prices is raised from previous day would perform better. With above, the entire transactions can be viewed in several segments. We would ignore those downward segment and in other each segment, the greedy strategy perform no worse than others. So the greedy strategy can get the global optimization.
+Because there is no limits on how many transactions and there is no penalty/cost on transactions. The problem becomes easy. Any transactions bring positive values should be considered. Also, if the stock prices are mono-increased. the profit of buying at the first day and selling at the last day is equals to buying at the first day and selling previous stock and buying again except the last day is the same. But if there is one day in the middle has a lower price than the previous day. The strategy of only make a transaction when the prices is raised from previous day would perform better. With above, the entire transactions can be viewed in several segments. We would ignore those downward segment and in other each segment, the greedy strategy perform no worse than others. So the greedy strategy can get the global optimization.
 
 ```java
     public int maxProfit(int[] prices) {
