--- a/Greedy/03.Assign_Cookies.md
+++ b/Greedy/03.Assign_Cookies.md
@@ -8,7 +8,7 @@ Each child `i` has a greed factor `g[i]`, which is the minimum size of a cookie 
 
 ### Solution
 
-A child would be content with a cookie is the size of cookie is greater or equal to his/her greedy factor, i.e. s[j] >= g[i]. If we focus on the greedy factor, we should give the large size to the child with largest greedy factor that less than or equal to the size. 
+A child would be content with a cookie is the size of cookie is greater or equal to his/her greedy factor, i.e. s[j] >= g[i]. If we focus on the greedy factor, we should give the large size to the child with the largest greedy factor that less than or equal to the size. 
 
 ```java
     public int findContentChildren(int[] g, int[] s) {
