--- a/Greedy/04.Walking_Robot_Simulation.md
+++ b/Greedy/04.Walking_Robot_Simulation.md
@@ -7,7 +7,7 @@ A robot on an infinite XY-plane starts at point `(0,0)` and faces north. The rob
 * `-2`: turn left 90 degrees
 * `-1`: turn right 90 degrees, or
 * 1 <= k <= 9: move forward k units.
-* Some of the grid squares are obstacles. The i^th^ obstacle is at grid point `obstacles[i] = (xi, yi)`.
+* Some grid squares are obstacles. The i^th^ obstacle is at grid point `obstacles[i] = (xi, yi)`.
 
 If the robot would try to move onto them, the robot stays on the previous grid square instead (but still continues following the rest of the route).
 
@@ -22,7 +22,7 @@ Return *the maximum Euclidean distance that the robot will be from the origin **
 
 ### Solution
 
-This problem is a simulation. so we would follow the instructions as much as possible until a obstacles is met. The most common missing point for this problem is the **the maximum  Euclidean distance**. Please be careful that it does NOT ask for the distance between the final position and the origin. We need to track the maximum Euclidean along the way. So, we need have a way to look up the obstacles quickly so that we can decide whether moving next is possible. There are many ways to do so. If we do not want to simulate this process one by one with k units. We need to data structure to the closest obstacles on the the moving direction and that should be able to looked up by the X and Y value which is not changed during our move. The find a celling (moving along direction) or floor value (moving against the direction) remind me the TreeSet. TreeSet provides O(nlogn) insertions and O(logn) look up for celling and floor value. But for those X and Y. We only focus on the value themselves. That part can be a HashMap with O(1) lookup for TreeMap contains obstacles in the vertical and horizontal lines. And of course, we need two HashMap to distinguish the vertical and horizonal and each obstacle would be put in both maps. Another thing is to rotate. Let's following the (x~i~, y~i~) scheme. The delta of moving north is (0,1). If we turn left, we would have. (0,1) -> (-1,0) -> (0,-1) -> (1,0) -> (0,1) -> ... Let us check those changes. After each turn, 0 switches its position with 1 or -1 and when 1 or -1 is at Y-axis, the sign of 1 changes after switching to new position. If 1 is on X-axis, it does not change. You can process this accordingly. But if we think 0 == -0, we can say all values on Y-axis would be multiplied by -1 and change its position with the value of X-axis. `int temp = -dir[1]; dir[1] = dir[0]; dir[0] = temp;`.  Let us think about turning right. (0,1) -> (1,0) -> (0,-1) ->(-1,0) ->(0,1)->... Similarly, you would find the value on X-axis would be multiplied by -1 before switching its position. `int temp = -dir[0]; dir[0] = dir[1]; dir[1] = temp;`
+This problem is a simulation. so we would follow the instructions as much as possible until a obstacles is met. The most common missing point for this problem is the **the maximum  Euclidean distance**. Please be careful that it does NOT ask for the distance between the final position and the origin. We need to track the maximum Euclidean along the way. So, we need have a way to look up the obstacles quickly so that we can decide whether moving next is possible. There are many ways to do so. If we do not want to simulate this process one by one with k units. We need to data structure to the closest obstacles on the the moving direction and that should be able to looked up by the X and Y value which is not changed during our move. The find a celling (moving along direction) or floor value (moving against the direction) remind me the TreeSet. TreeSet provides O(nlogn) insertions and O(logn) look up for celling and floor value. But for those X and Y. We only focus on the value themselves. That part can be a HashMap with O(1) lookup for TreeMap contains obstacles in the vertical and horizontal lines. And of course, we need two HashMap to distinguish the vertical and horizontal and each obstacle would be put in both maps. Another thing is to rotate. Let's following the (x~i~, y~i~) scheme. The delta of moving north is (0,1). If we turn left, we would have. (0,1) -> (-1,0) -> (0,-1) -> (1,0) -> (0,1) -> ... Let us check those changes. After each turn, 0 switches its position with 1 or -1 and when 1 or -1 is at Y-axis, the sign of 1 changes after switching to new position. If 1 is on X-axis, it does not change. You can process this accordingly. But if we think 0 == -0, we can say all values on Y-axis would be multiplied by -1 and change its position with the value of X-axis. `int temp = -dir[1]; dir[1] = dir[0]; dir[0] = temp;`.  Let us think about turning right. (0,1) -> (1,0) -> (0,-1) ->(-1,0) ->(0,1)->... Similarly, you would find the value on X-axis would be multiplied by -1 before switching its position. `int temp = -dir[0]; dir[0] = dir[1]; dir[1] = temp;`
 
 The other thing is that the problem does not make clear how it behaves when the starting square is an obstacle. This should be clarified with the interviewer. From the test case, when the starting square is an obstacle, the robot can still move as if there is no an obstacle at the first command. Some may think the robot cannot move at all but the test case shows differently. This also impact our TreeSet look up.  We would assume we cannot move against the instruction, Hence when we look  up the obstacles, we need to ignore the current position.  It would ceiling(p+1) or floor(p-1) to exclude the case that an obstacle located in the current position. 
 
