--- a/Greedy/05.Jump_Game.md
+++ b/Greedy/05.Jump_Game.md
@@ -8,7 +8,7 @@ Return true if you can reach the last index, or false otherwise.
 
 ### Solution
 
-This problem provides the max jump length at each position. A Brute Force method would try all combinations. One would start from the first index and perform a DFS search for all possible targets and check if they would reach the last index. In this approach, you would found a lot of redundant work. A position are likely to be searched multiple times because every time we would explore all the possible steps. For example the step is [3,2,3,5]. The 3rd position would be visited via step(s) 0 -> 2 or 0 -> 1 -> 2. But after reaching the 3rd places, there is no difference in the future steps. This would be a good place for dynamic programming. We would make a suffix array and fill the result backward. If you can jump to a position that can reach the last index. The newly investigated position can also jump to the last index. However, we can further simplify the solution. How do we know if one position can jump to the last index? As stated before, it would be as long as we can jump to a position either it is the last index or jumping from it would reach the last index. If we think backward as the DP solution, if one can jump to the last index from the position last index - 1,  we only need to be good enough reach last index - 1 and from then on we only need to reach the position we just investigated. So, instead of DP solution, we have a greedy strategy to shorten the target. As long as a small index can reach the previous target,  that should be the new target.
+This problem provides the max jump length at each position. A Brute Force method would try all combinations. One would start from the first index and perform a DFS search for all possible targets and check if they would reach the last index. In this approach, you would find a lot of redundant work. A position are likely to be searched multiple times because every time we would explore all the possible steps. For example the step is [3,2,3,5]. The 3rd position would be visited via step(s) 0 -> 2 or 0 -> 1 -> 2. But after reaching the 3rd places, there is no difference in the future steps. This would be a good place for dynamic programming. We would make a suffix array and fill the result backward. If you can jump to a position that can reach the last index. The newly investigated position can also jump to the last index. However, we can further simplify the solution. How do we know if one position can jump to the last index? As stated before, it would be as long as we can jump to a position either it is the last index or jumping from it would reach the last index. If we think backward as the DP solution, if one can jump to the last index from the position last index - 1,  we only need to be good enough reach last index - 1 and from then on we only need to reach the position we just investigated. So, instead of DP solution, we have a greedy strategy to shorten the target. As long as a small index can reach the previous target,  that should be the new target.
 
 ```java
     public boolean canJump(int[] nums) {
@@ -48,7 +48,7 @@ You can assume that you can always reach the last index.
 
 ### Solution
 
-This problem clearly says "You can assume that you can always reach the last index". This enables the greedy strategy. Otherwise, it would be similarly to non-greedy methods from the last question. A DFS or DP solution would help the find the result in general. However, we can test if it would reach the last index with Greedy solution above and then use the new greedy strategy. It similar to the last question. But this time, we know we can always reach the last index. So we can test from the beginning. Let us search from the starting point, As long as  we can jump from a position to the target, we have a new target. Because, unlike the last question, we now iterate from the beginning, this target is the smallest index can reach the previous target. We can repeat this process until target become 0.
+This problem clearly says "You can assume that you can always reach the last index". This enables the greedy strategy. Otherwise, it would be similarly to non-greedy methods from the last question. A DFS or DP solution would help the find the result in general. However, we can test if it would reach the last index with Greedy solution above and then use the new greedy strategy. It is similar to the last question. But this time, we know we can always reach the last index. So we can test from the beginning. Let us search from the starting point, As long as  we can jump from a position to the target, we have a new target. Because, unlike the last question, we now iterate from the beginning, this target is the smallest index can reach the previous target. We can repeat this process until target become 0.
 
 ```java
     public int jump(int[] nums) {
@@ -71,7 +71,7 @@ This problem clearly says "You can assume that you can always reach the last ind
     }
 ```
 
-Time complexity: The worst case, we can only jump 1 steps each time. O(n^2^)
+Time complexity: The worst case, we can only jump 1 steps each time. O(n<sup>2</sup>)
 
 space complexity: O(1)
 
