--- a/Greedy/07.Patching_Array.md
+++ b/Greedy/07.Patching_Array.md
@@ -8,9 +8,9 @@ Return *the minimum number of patches required*.
 
 ### Solution
 
-This is a very tricky question. I would say the math pay most part. It is kind of DP thinking in the first place. We need some induction to get what we can again from the newly investigated element and the previous conclusion. Assuming you already have an array that can satisfy the the requirement. Let us you can find the any number in the range [1,m] to be the sum of some elements in the array. Now, we add a new element k in the array. how is the range to be changed. First we have a sum of k iteself which is k. Since we have combinations to forming [1,m] at hand, we can add k to any of the sum in previous result. This would be [1,m] U [k,k] U [k + 1, k + m] = [1,m] U [k, k+ m].   As long as k <= m + 1, we have [1, k+m]. This is a new consecutive range formed by the sum of nums U {k}.  So, we can check the nums array with this logic. Because it is already sorted,  we can check from 1 to n and see if the subarray satisfy the requirement. Because we are looking for the missing element and there would be a gap if k > m+1, we can change [1,m] to [1, m+1) and focus on m+1. The next element  is greater than m+1, we need to add some number. Let us check the corner case, in the beginning, it is [0, 1) and we need to check if the first element is less than or equal to 1. That is satisfied for our expectation for the first element.  
+This is a very tricky question. I would say the math pay most part. It is kind of DP thinking in the first place. We need some induction to get what we can again from the newly investigated element and the previous conclusion. Assuming you already have an array that can satisfy the requirement. Let us you can find the any number in the range [1,m] to be the sum of some elements in the array. Now, we add a new element k in the array. how is the range to be changed. First we have a sum of k iteself which is k. Since we have combinations to forming [1,m] at hand, we can add k to any of the sum in previous result. This would be [1,m] U [k,k] U [k + 1, k + m] = [1,m] U [k, k+ m].   As long as k <= m + 1, we have [1, k+m]. This is a new consecutive range formed by the sum of nums U {k}.  So, we can check the nums array with this logic. Because it is already sorted,  we can check from 1 to n and see if the subarray satisfy the requirement. Because we are looking for the missing element and there would be a gap if k > m+1, we can change [1,m] to [1, m+1) and focus on m+1. The next element  is greater than m+1, we need to add some number. Let us check the corner case, in the beginning, it is [0, 1) and we need to check if the first element is less than or equal to 1. That is satisfied for our expectation for the first element.  
 
-Once we find a missing element, what should we do? In theory as long we add any integer k such that 1 <= k <= m+1. It would work. The new range would be from [1, m+2) to [1, 2m + 2). This is where greedy plays a role. The question is asking the minimum number of patches. compare the two range [1, m + 2 ) and [1, 2m + 2). The latter is better because we do not need worry about anything missed from [m + 2, 2m + 2) comparing to other solutions. Also if any elements in [m+2, 2m + 2), the benefit would be more. So we need to add the patch as much as possible and by previous analysis. That is m + 1.
+Once we find a missing element, what should we do? In theory as long we add any integer k such that 1 <= k <= m+1. It would work. The new range would be from [1, m+2) to [1, 2m + 2). This is where greedy plays a role. The question is asking the minimum number of patches. compare the two range [1, m + 2 ) and [1, 2m + 2). The latter is better because we do not need to worry about anything missed from [m + 2, 2m + 2) comparing to other solutions. Also, if any elements in [m+2, 2m + 2), the benefit would be more. So we need to add the patch as much as possible and by previous analysis. That is m + 1.
 
 ```java
     public int minPatches(int[] nums, int n) {
