--- a/Sorting/01.Relative_Sort_Array.md
+++ b/Sorting/01.Relative_Sort_Array.md
@@ -70,7 +70,7 @@ At the first glance, It seems this problem can be resolved by customized compara
     }
 ```
 
-Time complexity: Average O(nlogn) the worst case O(n^2^)
+Time complexity: Average O(nlogn) the worst case O(n<sup>2</sup>)
 
 Space complexity: the depth of recursion O(logn);
 
@@ -102,13 +102,13 @@ However, this is not the best solution.  We have elements in arr2 are distinct a
     }
 ```
 
-Time complexity: O(n + m) where n and m are length of arr1 and arr2 repectively.
+Time complexity: O(n + m) where n and m are length of arr1 and arr2 respectively.
 
 Space complexity: O(1) as the res[] is the return value so that is not counted and cnts is fixed array. You can use arr1 if the input can be modified.
 
 But what if we have elements in large range?
 
-If that case we can use a map instead of an array. Unless a TreeMap or NavigationMap is used, we cannot rely on the order of keys in the map. But lookup of a key would be O(logn). For LinkedHashMap, providing both O(1) lookup and performant iteration of entry, we would sorting the unique values in arr1 with another sorting algorithm. Here we simply called the sorting function provided by standard library.
+If that case we can use a map instead of an array. Unless a TreeMap or NavigationMap is used, we cannot rely on the order of keys in the map. But lookup of a key would be O(logn). For LinkedHashMap, providing both O(1) lookup and performant iteration of entry, we would sort the unique values in arr1 with another sorting algorithm. Here we simply called the sorting function provided by standard library.
 
 ```java
     public int[] relativeSortArray(int[] arr1, int[] arr2) {
