--- a/Sorting/02.Design_A_Leaderboard.md
+++ b/Sorting/02.Design_A_Leaderboard.md
@@ -42,7 +42,7 @@ Constraints:
 
 ### Solution
 
-This problem is asking for dynamic data inputs and random top k sum. For dynamic data inputs with sorting, it is usually related to heap or binary tree. Since the k is random. Heap might work but it would require some maintenance. Tree seems a better choice. We also need to reset a score. And the tree would using the score as key. So we need another data structure to  locate the key in the tree.
+This problem is asking for dynamic data inputs and random top k sum. For dynamic data inputs with sorting, it is usually related to heap or binary tree. Since the k is random. Heap might work but it would require some maintenance. Tree seems a better choice. We also need to reset a score. And the tree would select the score as key. So we need another data structure to locate the key in the tree.
 
 ```java
 public class Leaderboard {
