--- a/Sorting/03.Merge_Intervals.md
+++ b/Sorting/03.Merge_Intervals.md
@@ -14,7 +14,7 @@ The question is asking for merge intervals. If two intervals can be merged, they
 
 ##### Sorting with Important events
 
-We can try to improve the Brute Force solution. We can go over the event without going through the timestamp one by one? Each intervals actually provide two events for us. It is an OPEN event happened at the start time and a CLOSED event happened at the end time.  When a interval is not covered?  That is when all OPEN events find their matched CLOSED events. But we do not care about which CLOSED event is for which OPEN event. We only need to find out if every OPEN event find a match. This is like to verify parentheses that only contains one kind of parentheses. We can just use count to find out if all OPEN find their CLOSED. So, we would break the intervals into two events and mark open to be 1 and closed to be -1 so that they can directly be added to the count. Because it is timestamp, we can just sort them before counting. Also, for the boundary case, \[1, 5\] and \[5, 8\]. They are considered to have an overlap at 5. So we need to count the OPEN before CLOSED. That is when time is matched, OPEN event first. When we find the count is 0, we know it is the end of a merged interval. We should record the start before hand and add the start and current end to the result.
+We can try to improve the Brute Force solution. We can go over the event without going through the timestamp one by one? Each interval actually provide two events for us. It is an OPEN event happened at the start time and a CLOSED event happened at the end time.  When a interval is not covered?  That is when all OPEN events find their matched CLOSED events. But we do not care about which CLOSED event is for which OPEN event. We only need to find out if every OPEN event find a match. This is like to verify parentheses that only contains one kind of parentheses. We can just use count to find out if all OPEN find their CLOSED. So, we would break the intervals into two events and mark open to be 1 and closed to be -1 so that they can directly be added to the count. Because it is timestamp, we can just sort them before counting. Also, for the boundary case, \[1, 5\] and \[5, 8\]. They are considered to have an overlap at 5. So we need to count the OPEN before CLOSED. That is when time is matched, OPEN event first. When we find the count is 0, we know it is the end of a merged interval. We should record the start first and add the start and current end to the result.
 
 ```java
     // define OPEN and CLOSED event
@@ -60,7 +60,7 @@ We can try to improve the Brute Force solution. We can go over the event without
 
 ##### Sorting directly
 
- Actually for this problem, we can just sort the array directly. The important events is still a good method for solve many questions. But for this problem, sorting itself is good enough. We can sort by the start time and if the start time is the same, we can sort as the negative or reverse of the end time. The later is optional. It just reduce our operations on updating the end interval for the same start time.  By sorting in this way, we know the first met end time would be the largest end time among all intervals with the same start time. It won't change until a different / larger start time is met. When such start time appears. We can tell if it would be merge by checking if the current end time is greater or equal to the next start time. If yes, we can can merge them. During merge, there is nothing to make the intervals would end later than previous end. So we need to take the maximum of the two. If the next start time is greater than the end, we know we find a gap. We should start a new interval and close the current one.
+ Actually for this problem, we can just sort the array directly. The important events is still a good method for solve many questions. But for this problem, sorting itself is good enough. We can sort by the start time and if the start time is the same, we can sort as the negative or reverse of the end time. The latter is optional. It just reduces our operations on updating the end interval for the same start time.  By sorting in this way, we know the first met end time would be the largest end time among all intervals with the same start time. It won't change until a different / larger start time is met. When such start time appears. We can tell if it would be merged by checking if the current end time is greater or equal to the next start time. If yes, we can merge them. During merge, there is nothing to make the intervals would end later than previous end. So we need to take the maximum of the two. If the next start time is greater than the end, we know we find a gap. We should start a new interval and close the current one.
 
 ```java
     public int[][] merge(int[][] intervals) {
@@ -101,7 +101,7 @@ Space complexity: Arrays.sort should double ended quicksort. it should be O(1) -
 
 ##### Merge Sort
 
-The name reminds the merge sort way of merging the intervals. We can break intervals into individual interval and merge them from bottom up.  For one interval array there is nothing to merge. For two interval arrays, first they should be already sorted by the start time during the previous merge (It is merge sort) and then we can find the small start time of the two. Again we would try to check the next start time exceeded the previous end time. If yes, we find a gap. Otherwise, we can merge the two intervals and update the end time if the next end time is larger. The whole idea is from merge sort. We just modify the assignment part. This solution would help  some hard question such as  [The_Skyline_Problem](../Divide_and_Conquer__Backtrack/06.The_Skyline_Problem.md).
+The name reminds the merge sort way of merging the intervals. We can break intervals into individual interval and merge them from bottom up.  For one interval array there is nothing to merge. For two interval arrays, first they should be already sorted by the start time during the previous merge (It is merge-sort) and then we can find the small start time of the two. Again we would try to check the next start time exceeded the previous end time. If yes, we find a gap. Otherwise, we can merge the two intervals and update the end time if the next end time is larger. The whole idea is from merge sort. We just modify the assignment part. This solution would help  some hard question such as  [The_Skyline_Problem](../Divide_and_Conquer__Backtrack/06.The_Skyline_Problem.md).
 
 ```java
     public int[][] merge(int[][] intervals) {
@@ -210,7 +210,7 @@ Also, we wouldn’t include intervals like [5, 5] in our answer, as they have ze
 
 ### Solution
 
-This problem can be viewed as a variant of the Merge_Intervals. We can first flat the 3-dimension int\[\]\[\]\[\] to int\[\]\[\] and merge the Intervals and then get the gap between intervals. If you want to solve this problem directly without merging fist. We can modify the "sorting with important events" solution to find the gaps only.
+This problem can be viewed as a variant of the Merge_Intervals. We can first flat the 3-dimension int[][][] to int[][] and merge the Intervals and then get the gap between intervals. If you want to solve this problem directly without merging fist. We can modify the "sorting with important events" solution to find the gaps only.
 
 ```java
     // define OPEN and CLOSED event
