--- a/Sorting/04.Reverse_Pairs.md
+++ b/Sorting/04.Reverse_Pairs.md
@@ -10,7 +10,7 @@ A reverse pair is a pair `(i, j)` where `0 <= i < j < nums.length` and `nums[i] 
 
 ### Solution
 
-This is a variant of classic merge sort application get the Reverse Pair where `0 <= i < j < nums.length` and `nums[i] > nums[j]`. But this problem modify the condition to  only count when `nums[i] > 2 * nums[j]`. Of course the BF solution would O(n^2^) by a nest loop and finding target satisfy the condition.
+This is a variant of classic merge sort application get the Reverse Pair where `0 <= i < j < nums.length` and `nums[i] > nums[j]`. But this problem modify the condition to  only count when `nums[i] > 2 * nums[j]`. Of course the BF solution would O(n<sup>2</sup>) by a nest loop and finding target satisfy the condition.
 
 Let's first go back the classic problem focus on the reverse pair num[i] > nums[j] ignoring the 2. Why it works with merge sort. That is because merge sort first divided the array to left and right parts and then merge them together as a sorted array. The thing is for all elements in the left part, their indices are less than those in the right part. So if an element in the right part is moved to the sorted array before any element in the left. We found at least one reverse pair. That we say at least one is because each array is sorted before merge. So the any element after this element is still greater than the right element just moved to the final result. 
 
@@ -79,7 +79,7 @@ Time complexity : O (nlogn)
 
 Space complexity: O(n)
 
-Let's go back to the original question. We need find the nums[i] > 2 * nums[j] where i < j. But in merging process, we cannot wait for i and j satisfy the condition to merge. So, we can have a dedicated loop for counting nums[i] > 2 * nums[j] and keep the orignal merge sort process untouched.  Please be aware of the range of elements in nums. It is all the integer. If we use 2 * nums[j] directly, it would be overflow!. So we need convert it to long type. One approach is to multiply it by 2L.
+Let's go back to the original question. We need find the nums[i] > 2 * nums[j] where i < j. But in merging process, we cannot wait for i and j satisfy the condition to merge. So, we can have a dedicated loop for counting nums[i] > 2 * nums[j] and keep the original merge sort process untouched.  Please be aware of the range of elements in nums. It is all the integer. If we use 2 * nums[j] directly, it would be overflow!. So we need convert it to long type. One approach is to multiply it by 2L.
 
 ```java
     public int reversePairs(int[] nums) {
@@ -143,9 +143,9 @@ Space complexity: O(n)
 
 Actually, you can save one of the loop of counting nums[i] < 2 * nums[j] and the merge sort. We would then have a dedicated index just for nums[i] < 2 * nums[j]. We need to find out such i for every j. And we need to move j every time to avoid duplication. So another loop nested in this loop this required to move the left side fast. And in that case we can no longer have left <= mid && right <= hi as while condition. It would be right <= hi.  Why do we need to combine the `while (left <= mid && right <= hi)` loop and `while(right <= hi)` loop? That is because we need to consider the case some elements in both arrays are negative.  If one of element is non-negative, nums[i] <= nums[j] can lead to nums[i] <= 2\*nums[j]. In that case, we can stop explore when left > mid because for all element in the left part nums[i] <= nums[j] where j is any index remaining in the right side. And that means nums[i] <= nums[j]. But if both of them are negative. nums[i] <= nums[j] => nums[i] <= 2\*nums[j] is no longer valid. For example nums[i] = -3 and nums[j] = -2. -3 <= -2 But -3 > -4. In that case we can not stop when left <= mid. This should be removed.
 
-Another example is to merge \[-323, -314, -276\] and \[ -232, -183, 173\]. Every element in the left is less smaller but -323 > 2 * -232 = -464 , -323 > -2 *  183 = -366, -314 > -464, -314 > - 366,  -276 > -464 and -276 > -366. If we have left <= mid, move left by nums[i] < nums[j] and count  nums[i] < 2 * nums[j]  at the same time. It would stop at the first run and only  -323, -314, -276 > -464 are counted. So we need to continue move the dedicated index for  nums[i] < 2 * nums[j] after left <= mid being reached.
+Another example is to merge [-323, -314, -276] and [ -232, -183, 173]. Every element in the left is smaller but -323 > 2 * -232 = -464 , -323 > -2 *  183 = -366, -314 > -464, -314 > - 366,  -276 > -464 and -276 > -366. If we have left <= mid, move left by nums[i] < nums[j] and count  nums[i] < 2 * nums[j]  at the same time. It would stop at the first run and only  -323, -314, -276 > -464 are counted. So we need to continue move the dedicated index for  nums[i] < 2 * nums[j] after left <= mid being reached.
 
-If that is the case, can we replace left <= mid by countIdx <= mid?  No. That would affect the sorting result. Some left part may not merged. 
+If that is the case, can we replace left <= mid by countIdx <= mid?  No. That would affect the sorting result. Some left part may not be merged. 
 
 ```java
     public int reversePairs(int[] nums) {
