--- a/Stack_Queue_PriorityQueue_Deque/00.Introduction.md
+++ b/Stack_Queue_PriorityQueue_Deque/00.Introduction.md
@@ -25,7 +25,7 @@ How to implement Queue only with Stack?
 
 The seconds stack would act as a Queue for original order. When a new element to be added. All the elements in the second queue should be added back to the first one.
 
-One can also implements Stack only with Queue?
+One can also implement Stack only with Queue?
 
 [Link](https://leetcode.com/problems/implement-stack-using-queues/)
 
