--- a/Stack_Queue_PriorityQueue_Deque/03.Largest_Rectangle_in_Histogram.md
+++ b/Stack_Queue_PriorityQueue_Deque/03.Largest_Rectangle_in_Histogram.md
@@ -32,7 +32,7 @@ For every height, the largest rectangle it can form depends on the width. The wi
     }
 ```
 
-Time complexity: for loop * nested loop O(n) -> O(n^2)
+Time complexity: for loop * nested loop O(n) -> O(n<sup>2</sup>)
 
 Space complexity: O(1);
 
@@ -42,11 +42,11 @@ It is clear that the BF method requires a lot of duplicated works. Let check the
 
 ![histogram](image\histogram.png)
 
-The idea is to find the leftmost index such that all the heights between it and the current checking element are greater or equal to the current height. Similarly, We should also find the rightmost index such that all the heights between the current checking element and it are greater or equal to the current height. So the boundary of width depends on the first element which the heights less than the current height in both directions. For any heights, if a new height, says at index j, less than them is added, the right boundary is j - 1. How about the left boundary? we need to find out the most recent smaller height than the current height. As stated above, once the right boundary is found, the max area for a given histogram is determined. We can traceback the find the first smaller histogram than the current checking one (not j). But when the max area is found, should we keep track the checking histogram? No. That is because any newly added histogram afterward would form a area with the height at most the height at j if it extends this part. The previous higher bar than the bar at j would not help for new area. Hence, we do not need to keep them. In that case the left boundary is the index of the first left bar + 1. Any higher bar in between should be removed already. 
+The idea is to find the leftmost index such that all the heights between it and the current checking element are greater or equal to the current height. Similarly, We should also find the rightmost index such that all the heights between the current checking element and the node are greater or equal to the current height. So the boundary of width depends on the first element which the heights less than the current height in both directions. For any heights, if a new height, says at index j, less than them is added, the right boundary is j - 1. How about the left boundary? we need to find out the most recent smaller height than the current height. As stated above, once the right boundary is found, the max area for a given histogram is determined. We can traceback the find the first smaller histogram than the current checking one (not j). But when the max area is found, should we keep track the checking histogram? No. That is because any newly added histogram afterward would form a area with the height at most the height at j if it extends this part. The previous higher bar than the bar at j would not help for new area. Hence, we do not need to keep them. In that case the left boundary is the index of the first left bar + 1. Any higher bar in between should be removed already. 
 
-For example, if the height array is [2,1,5,6,2,3], the area involve [2,1,5] would be 1 because that is the lowest. That means after 1, 2 would not be candidates any more when the rectangle starts at index 0. This is the same for 5,6, after 2 (index 4), the height of any rectangles including any of them would be at most 2. And for section [1,5,6,2], when 2 is added, we know the right boundary of 6 is itself and the left boundary is the index of 5 + 1 is also itself. It should be removed. Then for 5, its right boundary is still index of 2 -1 and its left boundary is the index of 1 + 1. After this process, not only the max areas of 5 and 6 are found but it also tells the left boundary of 2 is the index of 1 + 1. If not, the height of rectangle is 1 instead of 2.
+For example, if the height array is [2,1,5,6,2,3], the area involve [2,1,5] would be 1 because that is the lowest. That means after 1, 2 would not be candidates from then when the rectangle starts at index 0. This is the same for 5,6, after 2 (index 4), the height of any rectangles including any of them would be at most 2. And for section [1,5,6,2], when 2 is added, we know the right boundary of 6 is itself and the left boundary is the index of 5 + 1 is also itself. It should be removed. Then for 5, its right boundary is still index of 2 -1 and its left boundary is the index of 1 + 1. After this process, not only the max areas of 5 and 6 are found but it also tells the left boundary of 2 is the index of 1 + 1. If not, the height of rectangle is 1 instead of 2.
 
-So the data structure only keeps the smaller height than to-be added bar. We are maintaining a mono-decreasing array.  As you can see in above example, 5 is added before 6 but it is checked after 6. This tells us a stack can be used for this problem. When a new height is added, if any height left in t he stack is higher than it, the rectangle with that height is determined. The indices instead of the height is added in the stack because we need to find the width and the height can be obtained through the index.  One thing would help is to add -1 in the first position to help calculate the rectangle starts at index 0 and the after adding all the heights. Any thing left in the stack should be popped out to calculate the rectangle ends at the last index. Another way to deal with the boundaries is to create a new array by inserting 0's at both ends of the original heights. In that case, there is no need to consider the edge cases because 0 would be always smallest height and it does not affect the result.
+So the data structure only keeps the smaller height than to-be added bar. We are maintaining a mono-decreasing array.  As you can see in above example, 5 is added before 6, but it is checked after 6. This tells us a stack can be used for this problem. When a new height is added, if any height left in the stack is higher than it, the rectangle with that height is determined. The indices instead of the height is added in the stack because we need to find the width and the height can be obtained through the index.  One thing would help is to add -1 in the first position to help calculate the rectangle starts at index 0 and the after adding all the heights. Any thing left in the stack should be popped out to calculate the rectangle ends at the last index. Another way to deal with the boundaries is to create a new array by inserting 0's at both ends of the original heights. In that case, there is no need to consider the edge cases because 0 would be always the smallest height. It does not affect the result.
 
 ```java
     public int largestRectangleArea(int[] heights) {
