--- a/Binary_Search/02.Search_in_Rotated_Sorted_Array.md
+++ b/Binary_Search/02.Search_in_Rotated_Sorted_Array.md
@@ -8,13 +8,13 @@ There is an integer array `nums` sorted in asceding order with distinct values.
 
 Given the array `nums` after the rotation and an integer target, return the index of target if it is in `nums`, or - 1 otherwise.
 
-You must write an algortihm with O(log n) runtime complexity.
+You must write an algorithm with O(log n) runtime complexity.
 
 ### Solution
 
-The BF solution would be O(n) runtime complexity by iterating the element in the array and compare to the target. But that does not satisfy the O(log n) requirement.
+The BF solution would be O(n) runtime complexity by iterating the element in the array and compare to the target. But that does not satisfy the O(logn) requirement.
 
-O(log n) is the binary search complexity. We would check if anything similar to the binary search can be performed. We can look closely to the question. After rotation. We have two sorted sections. the first one is [ nums[k], ..., nums[n-1]] and [nums[0], ..., nums[k-1]]. If twe know the new index of nums[n-1] or nums[0], We have two sorted array. We can apply binary search for both. But the requirement is O(log n). So we need to find nums[n-1] by O(log n) time. What do we know about nums[0]? It is the smallest element. What about the right side of nums[0]? that section section is a sorted array. How about the left side? They also sorted and every element in the section is greater than the last/largest element in the right side. This element is also the the only element less than its left neighbor. This would help us to find the index. We would move the left boundary when it is greater than to the last element. Otherwise, we can move the right side. Note, we can rotate at index 0. That means the whole array is sorted we need to consider that case.
+O(logn) is the binary search complexity. We would check if anything similar to the binary search can be performed. We can look closely to the question. After rotation. We have two sorted sections. the first one is [ nums[k], ..., nums[n-1]] and [nums[0], ..., nums[k-1]]. If twe know the new index of nums[n-1] or nums[0], We have two sorted array. We can apply binary search for both. But the requirement is O(log n). So we need to find nums[n-1] by O(log n) time. What do we know about nums[0]? It is the smallest element. What about the right side of nums[0]? that section is a sorted array. How about the left side? They also sorted and every element in the section is greater than the last/largest element on the right side. This element is also the only element less than its left neighbor. This would find the index. We would move the left boundary when it is greater than to the last element. Otherwise, we can move the right side. Note, we can rotate at index 0. That means the whole array is sorted we need to consider that case.
 
 ```java
     public int search(int[] nums, int target) {
@@ -80,13 +80,13 @@ Time complexity: Two binary search O(logn)
 
 Space complexity: O(1)
 
-The above method peform two binary searches. Do we have a better solution. Can we search with just one modified binary search? Let us check the the following diagram.
+The above method is composed of two binary searches. Do we have a better solution. Can we search with just one modified binary search? Let us check the following diagram.
 
 ![rotate_array](image\rotate_array.png)
 
-The red points are the elements in the array. We can see within the green box. All elements are roated from the back. Let us try to apply the binary search algorithm to the problem. our mid could appear either in the secion of greenbox or the rest part. Let us check the case it is in the green box. Let's say the current reached point is mid0. For simplitiy, let check when should we take mid0 as the right boundary. We know all the left parts (within greenbox) are greater than others. So if target is in the blue box. we can set mid0 as the right boundary. This would require nums[mid0] > nums[0] so it is in the greenbox and nums[mid0] > target && nums[0] < target so that the target should be in the blue box. But if the mid is outside of the greenbox. Let' say mid1. As all the elements in the green box are greater than those points. We have two scenario. 1. the target should be in the orange box. 2. the target is the greenbox. For a point is out side of the green box , we have nums[mid] < nums[0]. For the first one it is easy to narror down num[mid1] > target. For the second part. we would require target >= nums[0].
+The red points are the elements in the array. We can see within the green box. All elements are rotated from the back. Let us try to apply the binary search algorithm to the problem. our mid could appear either in the section of green-box or the rest part. Let us check the case it is in the green box. Let's say the current reached point is mid0. For simplicity, let check when should we take mid0 as the right boundary. We know all the left parts (within greenbox) are greater than others. So if target is in the blue box. we can set mid0 as the right boundary. This would require nums[mid0] > nums[0] so it is in the greenbox and nums[mid0] > target && nums[0] < target so that the target should be in the blue box. But if the mid is out of the greenbox. Let' say mid1. As all the elements in the green box are greater than those points. We have two scenario. 1. the target should be in the orange box. 2. the target is the greenbox. For a point is out of the green box , we have nums[mid] < nums[0]. For the first one it is easy to narrow down num[mid1] > target. For the second part. we would require target >= nums[0].
 
-Othwise we move the left side.
+Otherwise, we move the left side.
 
 ```java
     public int search(int[] nums, int target) {
@@ -136,7 +136,7 @@ You must write an algorithm that runs in `O(log n)` time.
 
 ### Solution
 
-This has been solved in the first solution of "Search in Rotated Sorted Array". Please check the findBoundary function. Please note this question is asking for the element instead of the index. Every element in the first sorted part are greater than any element in the second sorted part. The largest element in the second sorted section is the last element. With this we can know where the mid currently is. If it is larger than the right end, it would be in the first sorted section. We would move the left boundary. Otherwise, it is in the second sorted section, we would move the right boundary. Also after moving the condition still holds. If we find an element is less than its previous element, that is the answer but we should prevent negative index. 
+This has been solved in the first solution of "Search in Rotated Sorted Array". Please check the findBoundary function. Please note this question is asking for the element instead of the index. Every element in the first sorted part are greater than any element in the second sorted part. The largest element in the second sorted section is the last element. With this we can know where the mid currently is. If it is larger than the right end, it would be in the first sorted section. We would move the left boundary. Otherwise, it is in the second sorted section, we would move the right boundary. Also, after moving the condition still holds. If we find an element is less than its previous element, that is the answer, but we should prevent negative index. 
 
 ```java
     public int findMin(int[] nums) {
