--- a/DP/19.Maximal_Rectangle.md
+++ b/DP/19.Maximal_Rectangle.md
@@ -36,7 +36,7 @@ It is hard to think the string as a whole. But for each stage, it is clear. One 
 
 #### DP
 
-With the above BF solution, it can be translate into dp with memorization and tabulation. This is clearly a suffix dp.
+With the above BF solution, it can be translated into dp with memorization and tabulation. This is clearly a suffix dp.
 
 ```
 dp[i] = (chars[i] != '0' ? dp[i + 1] : 0) + (chars[i:i+1] is 10 ~ 26 ? dp[i+2] : 0);
