--- a/Divide_and_Conquer__Backtrack/06.The_Skyline_Problem.md
+++ b/Divide_and_Conquer__Backtrack/06.The_Skyline_Problem.md
@@ -21,25 +21,25 @@ The **skyline** should be represented as a list of "key points" **sorted by thei
 ### Solution
 
 1. Brute Force
-   The solution with simplest logic is brute force. Each building can be mapped to the x-axis. For example, [0,2,8] would be mapped to 3 points (0,8), (1,8) and (2,0). The last one is 0 to match the question. In the above example, only the red points are recorded. That where the height changes. At 2 the height is changed from 8 to 0. We can continue to map others. Each time, we would check if the new point is greater than the current height on x-axis. If yes, that is the new value. Otherwise, the original value is kept. For example, we have a new building [0,5,6] in addition to [0,2,8]. The new building would provide 6 points (0,6), (1,6),(2,6), (3,6), (4,6), (5,0). the first two points are ignored because they are less than 8. For the rest ( originally 3 - 5 are (3,0),(4,0),(5,0)). The new points wins. The result would be (0,8), (1,8),(2,6), (3,6), (4,6), (5,0). We can repeat this process until all the buildings are added. Now, we can generate the final answer from those records. Once the height is changed, we could record a point with new height. This algorithm is bounded by the min and max x-coordinates. The time complexity is O(X~max~ - X~min~).  Note, this is not polynomial for n (number of buildings).
+   The solution with the simplest logic is brute force. Each building can be mapped to the x-axis. For example, [0,2,8] would be mapped to 3 points (0,8), (1,8) and (2,0). The last one is 0 to match the question. In the above example, only the red points are recorded. That where the height changes. At 2 the height is changed from 8 to 0. We can continue to map others. Each time, we would check if the new point is greater than the current height on x-axis. If yes, that is the new value. Otherwise, the original value is kept. For example, we have a new building [0,5,6] in addition to [0,2,8]. The new building would provide 6 points (0,6), (1,6),(2,6), (3,6), (4,6), (5,0). the first two points are ignored because they are less than 8. For the rest ( originally 3 - 5 are (3,0),(4,0),(5,0)). The new points wins. The result would be (0,8), (1,8),(2,6), (3,6), (4,6), (5,0). We can repeat this process until all the buildings are added. Now, we can generate the final answer from those records. Once the height is changed, we could record a point with new height. This algorithm is bounded by the min and max x-coordinates. The time complexity is O(X~max~ - X~min~).  Note, this is not polynomial for n (number of buildings).
 
 2. LinkedList
-   How to improve the brute force. One common technique is to think about "important events" instead of all the values. In this case, the important events here is when the height changes. A building [0,2,8] would have events with height (0,8) and (2,0). As one can see, this is what the final result asks. The height changing events during the skyline drawing process. But after breaking the them into two events, we have another trouble, one need to know when previous heights should change. If there is no overlap, it would be an easy question. But we would consider the case [0,5,8] and [1,3,2]. If we only consider the events, it would be (0,8), (5,0), (1,2) and (3,0). One may need to sort according to x-axis. Actually [1,3,2] does not changes the skyline. But after sorting, the relationship is missing. when encounters (3,0). We do not know if that is the end of [0,5,8] or the end of [1,3,2].  To overcome this, we can take advantage of LinkedList. We can sort the buildings by the left corners and when we encounter a building, we can push a ending event to the linked list. But the difference is that the ending event would be a triple with the height of the current square. The elements in the list would be maintained as a mono-increasing array: An new element would bring the following changes
+   How to improve the brute force. One common technique is to think about "important events" instead of all the values. In this case, the important events here is when the height changes. A building [0,2,8] would have events with height (0,8) and (2,0). As one can see, this is what the final result asks. The height changing events during the skyline drawing process. But after breaking them into two events, we have another trouble, one need to know when previous heights should change. If there is no overlap, it would be an easy question. But we would consider the case [0,5,8] and [1,3,2]. If we only consider the events, it would be (0,8), (5,0), (1,2) and (3,0). One may need to sort according to x-axis. Actually [1,3,2] does not change the skyline. But after sorting, the relationship is missing. when encounters (3,0). We do not know if that is the end of [0,5,8] or the end of [1,3,2].  To overcome this, we can take advantage of LinkedList. We can sort the buildings by the left corners and when we encounter a building, we can push a ending event to the linked list. But the difference is that the ending event would be a triple with the height of the current square. The elements in the list would be maintained as a mono-increasing array: An new element would bring the following changes
    
    1. An existing element with lower height and with x <= the current one in the list should be removed
    2. If an existing element with x value >= the current one and height >= the current one, the current value should not be added.
    3. If an existing element with higher heights and small x compare to the current one, we should keep this element and check the next one in the list.
    
-   This would result in a O(n^2^) solution as in the worst each newly added element would go over all previously added element and the sorting is surpassed by n^2^ . 
+   This would result in a O(n<sup>2</sup>) solution as in the worst each newly added element would go over all previously added element and the sorting is surpassed by n<sup>2</sup> . 
    
    One can choose just maintain the List with both starting and ending events of buildings and then convert them to the final result. Or only push ending events to the list and maintain the result with both starting events by order and ending events in the list.
    
 3. Divide and Conquer
 
-   Let go back to the point that we break the buildings into events ([0,2,8] -> (0,8) and (2,0)). We need to find the link between them. What is holding the relationship with them but only with the changing events? The question itself gives us the answer. The result of this question is an example of changing events and it their relationship. one would draw horizonal line between events and drawing vertical line at  the event.  When the question is divided into subproblem with only one building, the answer is obvious , e.g. [0,2,8] -> (0,8) and (2,0). If they can be merged back to solve the original problem, this would be our answer. Because the relationship is holding in the result. It should be possible. After all, the result is the sequence of height changing events. In each sub-result, height would not change until a new event being explored and the merging them would be taking higher point of them along x-axis. When two subproblems are merged,  events can be taken from both subproblems by the order of x-axis:
+   Let go back to the point that we break the buildings into events ([0,2,8] -> (0,8) and (2,0)). We need to find the link between them. What is holding the relationship with them but only with the changing events? The question itself gives us the answer. The result of this question is an example of changing events and their relationship. one would draw horizontal line between events and drawing vertical line at  the event.  When the question is divided into sub-problems with only one building, the answer is obvious , e.g. [0,2,8] -> (0,8) and (2,0). If they can be merged back to solve the original problem, this would be our answer. Because the relationship is holding in the result. It should be possible. After all, the result is the sequence of height changing events. In each sub-result, height would not change until a new event being explored and the merging them would be taking higher point of them along x-axis. When two sub-problems are merged,  events can be taken from both sub-problems by the order of x-axis:
 
-   1. we take the events with smaller x. If both subproblems have the same x,  we take both
-   2. we should keep the record of the last height in each subproblem's result. An event is taken from any of them means a update in the corresponding last height in the record.
+   1. we take the events with smaller x. If both sub-problems have the same x,  we take both
+   2. we should keep the record of the last height in each sub-problem's result. An event is taken from any of them means a update in the corresponding last height in the record.
    3. The current height until next event is the higher of the two records. 
 
    There is some miscellaneous to process. The question explicitly asks for no consecutive events/points with the same height. That should be checked before adding the final result. 
