--- a/Stack_Queue_PriorityQueue_Deque/01.Stack.md
+++ b/Stack_Queue_PriorityQueue_Deque/01.Stack.md
@@ -8,7 +8,7 @@ A string only contains '(', ')', '[', ']', '{' and '}'. Check if the string is a
 
 #### Analysis
 
-For valid parentheses, any ')', ']' and '}' must be after '(',  '['' and '{' correspondingly  and they should not be paired with other closed marks. If there is only one kind of parentheses. This question can be resolved by counter. But for this question, not only need we know the if there is an open mark but also to know which kind of open mark. Because we only care if the last unpaired open mark matches the current closed mark, this fits the stack structure. counters do not work because we cannot tell which open marks should be used to match when you have three counters for each e.g. [{(}]). As we only need to check open marks, the stack can be used to store open marks. Each time, a open mark would be popped from the stack and if they are matched, continue to check. Otherwise, it is not valid. In the end, we would check if the stack has matched mark left. If there is left, return false. Otherwise, return true. 
+For valid parentheses, any ')', ']' and '}' must be after '(',  '['' and '{' correspondingly and they should not be paired with other closed marks. If there is only one kind of parentheses. This question can be resolved by counter. But for this question, not only need we know the if there is an open mark but also to know which kind of open mark. Because we only care if the last unpaired open mark matches the current closed mark, this fits the stack structure. counters do not work because we cannot tell which open marks should be used to match when you have three counters for each e.g. [{(}]). As we only need to check open marks, the stack can be used to store open marks. Each time, an open mark would be popped from the stack and if they are matched, continue to check. Otherwise, it is not valid. In the end, we would check if the stack has matched mark left. If there is left, return false. Otherwise, return true. 
 
 ```java
     public boolean isValid(String s) {
