--- a/Stack_Queue_PriorityQueue_Deque/02.Deque.md
+++ b/Stack_Queue_PriorityQueue_Deque/02.Deque.md
@@ -8,7 +8,7 @@ For a integer array, there is a sliding window of size k moving from left to rig
 
 #### Analysis
 
-The question is asking all the max seen during window sliding from left to right. Hence there is n - k + 1 elements in the result, where n is the number of elements in the array. A Brute Force solution would iterate over all the elements in a window and find out the max. It is easy to find out there are many duplicated works. For example if ith element  is the "peak" in the range (i - k , i + k). The result is always the ith element in the range. It would be easy to find out if there is a larger element than previous max is added in the window. The previous max would not be the max in the future because it would exit from the window earlier than the later element. But can we only keep the max element? This is similar to in the [Min Stack](..\01.Stack.md). When the max removed from the window. The next max has not to be the newly added element e.g. with k= 2 there is a window [3,2] and the next element is 1. 2 should be the max instead of 1.So we need to keep 2. But if any thing greater than 2 is added, 2 should be removed. This the same as the max analysis. 2 would not be the max any more because it exit earlier than the newly added larger element. That's it. We need to maintain a non-increasing array. Any elements less than the newly added element should be removed. This can be implemented by a Stack. However, we need to remove element when the window slides out of its index. That part is a Queue because it requires FIFO. Because we need both Stack and Queue, a Deque should work. 
+The question is asking all the max seen during window sliding from left to right. Hence there is n - k + 1 elements in the result, where n is the number of elements in the array. A Brute Force solution would iterate over all the elements in a window and find out the max. It is easy to find out there are many duplicated works. For example if ith element  is the "peak" in the range (i - k , i + k). The result is always the ith element in the range. It would be easy to find out if there is a larger element than previous max is added in the window. The previous max would not be the max in the future because it would exit from the window earlier than the later element. But can we only keep the max element? This is similar to in the [Min Stack](..\01.Stack.md). When the max removed from the window. The next max has not to be the newly added element e.g. with k= 2 there is a window [3,2] and the next element is 1. 2 should be the max instead of 1.So we need to keep 2. But if anything greater than 2 is added, 2 should be removed. This the same as the max analysis. 2 would not be the max any more because it exits earlier than the newly added larger element. That's it. We need to maintain a non-increasing array. Any elements less than the newly added element should be removed. This can be implemented by a Stack. However, we need to remove element when the window slides out of its index. That part is a Queue because it requires FIFO. Because we need both Stack and Queue, a Deque should work. 
 
 
 ```java
@@ -67,7 +67,7 @@ Implement the `MyCircularDeque` class:
 
 ### Analysis
 
-This question is an open question for Circular Deque. One of implementation in Java Core Library is ArrayDeque. This is question is simplified version because the capacity is fixed after initialization but it illustrate the main idea of a circular deque.  From the name, we know the data structure would have something like a cycle. All the elements are store in the cycle. The cycle data structure would make it possible to insertFront, insertLast, deleteFront and deleteLast with O(1) time-cost. That would take advantage of the pointers in the front and in the back. Insert would move the front or back pointer to the proper position and insert value. Delete would move the pointers to proper position to make it seems to be deleted as one would not get the element. For a cycle (in graph), one might start to think some type like ListNode, which pointing to a previous node and a next node. However, it does not added any value compare to pure ListNode.  a head and a tail of ListNode, current number of nodes and a limit on total number of nodes can already implements all the requirements of the Deque without a cycle. One of the solution is based on array. How an array represents a cycle? Instead of make the array cycle, we can make the pointer circulate around the length of array. That is the mod of the array length. When the index equal to the length or -1. They would be wrapped up to 0 and the length - 1 correspondingly to make it as a cycle. What is the size of the array? Would k works? (k is the compacity of the circular deque). For storing all the data. it works. But with k elements, one cannot tell the difference between empty and full because the index is between 0 and length - 1 after mode and startIdx == endIdx can be both empty and full. So we need some other information.  One may think about an indicator such as boolean isFull. That works but this would make the implementation very complicated. A mistake in check or failed to reset it would make a bug. One easy solution is to make the array k + 1. With this additional entry. We know can tell the difference between empty and full. If the startIdx == endIdx, that is empty. If the startIdx - 1 == end (in circular index), that is full. Note in that case, the last item is stored in pos endIdx - 1 (circular index) instead of endIdx.
+This question is an open question for Circular Deque. One of implementation in Java Core Library is ArrayDeque. This is question is simplified version because the capacity is fixed after initialization but it illustrates the main idea of a circular deque.  From the name, we know the data structure would have something like a cycle. All the elements are store in the cycle. The cycle data structure would make it possible to insertFront, insertLast, deleteFront and deleteLast with O(1) time-cost. That would take advantage of the pointers in the front and in the back. Insert would move the front or back pointer to the proper position and insert value. Delete would move the pointers to proper position to make it seems to be deleted as one would not get the element. For a cycle (in graph), one might start to think some type like ListNode, which pointing to a previous node and a next node. However, it does not add any value compare to pure ListNode.  a head and a tail of ListNode, current number of nodes and a limit on total number of nodes can already implement all the requirements of the Deque without a cycle. One of the solution is based on array. How an array represents a cycle? Instead of make the array cycle, we can make the pointer circulate around the length of array. That is the mod of the array length. When the index equal to the length or -1. They would be wrapped up to 0 and the length - 1 correspondingly to make it as a cycle. What is the size of the array? Would k works? (k is the capacity of the circular deque). For storing all the data. it works. But with k elements, one cannot tell the difference between empty and full because the index is between 0 and length - 1 after mode and startIdx == endIdx can be both empty and full. So we need some other information.  One may think about an indicator such as boolean isFull. That works but this would make the implementation very complicated. A mistake in check or failed to reset it would make a bug. One easy solution is to make the array k + 1. With this additional entry. We know can tell the difference between empty and full. If the startIdx == endIdx, that is empty. If the startIdx - 1 == end (in circular index), that is full. Note in that case, the last item is stored in pos endIdx - 1 (circular index) instead of endIdx.
 
 ```java
 class MyCircularDeque {
